--- a/en/f/feel.6876.wikitext
+++ b/en/f/feel.6876.wikitext
@@ -331,8 +331,7 @@ From {{inh|en|enm|felen}}, from {{inh|en|ang|fēlan|t=to feel, perceive, touch}}
 * Korean: {{t+check|ko|느끼다|sc=Kore}}
 * Latin: {{t-check|la|sentīre}}
 {{trans-mid}}
-* Latvian: {{t+check|lv|just}} (1), {{t-check|lv|taustīt}} (2), {{t-check|lv|aptaustīt}} (2), {{t-check|lv|justies}} (3)
-* Latvian: {{t+check|lv|just}} (1,2,4,5,6), {{t-check|lv|taustīties}} (3)
+* Latvian: {{t+check|lv|just}} (1,2,4,5,6), {{t-check|lv|taustīt}} (2), {{t-check|lv|aptaustīt}} (2), {{t-check|lv|justies}} (3), {{t-check|lv|taustīties}} (3)
 * Mandarin: {{t+check|cmn|触|tr=chu}}, {{t+check|cmn|摸|tr=mo}}, {{t+check|cmn|感知|tr=ganzhi}}
 * Romanian: {{t+check|ro|simți|alt=a (se) simți}}
 * Scottish Gaelic: {{t-check|gd|mothaich}}, {{t-check|gd|fairich}}
