--- a/en/是/是.16983.wikitext
+++ b/en/是/是.16983.wikitext
@@ -101,6 +101,7 @@ A way to use {{lang|zh|是}} with an adjective is to use {{zh-l|的|tr=de}} afte
 
 ===References===
 * {{R:yue:Hanzi}}
+* {{thcwd|5013}}
 
 {{zh-cat|Beginning}}
 
