t+uz:[[urushmoq]] t+uz:[[kurashmoq]] ([[WT:EDIT|Assisted]]) <fight#52108768>

--- a/en/f/fight.6879.wikitext
+++ b/en/f/fight.6879.wikitext
@@ -158,6 +158,7 @@ The noun is from {{inh|en|ang|feoht}}, from the verb; compare Dutch {{m|nl|gevec
 * Tuvan: {{t|tyv|демисежир}}
 * Ukrainian: {{t+|uk|би́тися|impf|sc=Cyrl}}; {{t+|uk|боро́тися|impf|sc=Cyrl}}, {{t|uk|воюва́ти|impf|sc=Cyrl}}
 * Urdu: {{t|ur|لڑنا|tr=laṛnā|sc=ur-Arab}}, {{t|ur|جھگڑنا|tr=jhagaṛnā|sc=ur-Arab}}
+* Uzbek: {{t+|uz|urushmoq}}, {{t+|uz|kurashmoq}}
 * Vietnamese: {{t+|vi|chiến đấu}}
 * Welsh: {{t+|cy|brwydro}}
 * West Frisian: {{t|fy|fjochtsje}}
