--- a/en/f/fight.6879.wikitext
+++ b/en/f/fight.6879.wikitext
@@ -85,7 +85,7 @@ The noun is from {{inh|en|ang|feoht}}, from the verb; compare Dutch {{m|nl|gevec
 * Chinese:
 *: Cantonese: {{t|yue|打交|tr=daa2 gaau1|sc=Hani}}
 *: Mandarin: {{t+|cmn|鬥爭|sc=Hani}}, {{t+|cmn|斗争|tr=dòuzhēng|sc=Hani}}, {{t+|cmn|戰鬥|sc=Hani}}, {{t+|cmn|战斗|tr=zhàndòu|sc=Hani}}, {{t+|cmn|奮鬥|sc=Hani}}, {{t+|cmn|奋斗|tr=fèndòu|sc=Hani}}
-*: Min Dong: {{t|cdo|相伐|tr=soung pa|sc=Hani}}
+*: Min Dong: {{t-check|cdo|相伐|tr=soung pa|sc=Hani}}
 * Czech: {{t+|cs|bojovat}}, {{t|cs|zápasit}}, {{t+|cs|bít|alt=bít se}}
 * Danish: {{t|da|slås}}, {{t|da|kæmpe}}
 * Dutch: {{t+|nl|strijden}}, {{t+|nl|vechten}}, {{t+|nl|kampen}}
@@ -98,8 +98,8 @@ The noun is from {{inh|en|ang|feoht}}, from the verb; compare Dutch {{m|nl|gevec
 * German: {{t+|de|kämpfen}}, {{t+|de|fechten}}, {{t+|de|streiten}} {{qualifier|archaic}}
 * Greek: {{t+|el|παλεύω}}, {{t+|el|μάχομαι}}
 *: Ancient: {{t|grc|μάχομαι}}
-* Hebrew: {{t+|he|רב|tr=rav}}, {{t+|he|נאבק|tr=ne'evák}}, {{t+|he|נלחם|tr=nilkhám}}
-* Hindi: {{t+|hi|लड़ना|tr=laṛnā|sc=Deva}}, {{t+|hi|झगड़ना|sc=Deva}}
+* Hebrew: {{t+|he|רָב|tr=rav}}, {{t+|he|נֶאֱבַק|tr=ne'evák}}, {{t+|he|נִלְחַם|tr=nilkhám}}
+* Hindi: {{t+|hi|लड़ना}}, {{t+|hi|झगड़ना}}
 * Hungarian: {{t+|hu|harcol}}, {{t+|hu|verekszik}}
 * Icelandic: {{t+|is|slást}}, {{t+|is|berjast}}
 * Indonesian: {{t+|id|kelahi}}, {{t+|id|tarung}}
@@ -107,7 +107,7 @@ The noun is from {{inh|en|ang|feoht}}, from the verb; compare Dutch {{m|nl|gevec
 * Italian: {{t+|it|lottare}}, {{t+|it|azzuffarsi}}, {{t+|it|battersi}}
 * Japanese: {{t+|ja|喧嘩|tr=けんかする, kenka suru|sc=Jpan|alt=喧嘩する}}, {{t|ja|対決|tr=たいけつする, taiketsu suru|sc=Jpan|alt=対決する}}, {{t+|ja|戦う|tr=たたかう, tatakau|sc=Jpan}}, {{t+|ja|闘う|tr=たたかう, tatakau|sc=Jpan}}
 * Kazakh: {{t|kk|төбелесу|sc=Cyrl}}, {{t|kk|ұрысу|sc=Cyrl}}, {{t+|kk|күресу|sc=Cyrl}}, {{t|kk|соғысу|sc=Cyrl}}
-* Khmer: {{t|km|វាយតប់|tr=wīē-dtop|sc=Khmr}}
+* Khmer: {{t|km|វាយតប់}}
 * Korean: {{t+|ko|다투다}}, {{t+|ko|싸우다}}
 * Kurdish:
 *: Sorani: {{t|ku|شه‌ڕ کردن|tr=shaR kirdin|sc=ku-Arab}}
@@ -190,7 +190,7 @@ The noun is from {{inh|en|ang|feoht}}, from the verb; compare Dutch {{m|nl|gevec
 * Italian: {{t+|it|combattere}}
 * Japanese: {{t+|ja|戦う|tr=たたかう, tatakau|sc=Jpan}}, {{t+|ja|闘う|tr=たたかう, tatakau|sc=Jpan}}
 {{trans-mid}}
-* Khmer: {{t+|km|តស៊ូ|tr=dtor-sū|sc=Khmr}}
+* Khmer: {{t+|km|តស៊ូ}}
 * Latvian: {{t|lv|cīnīties}}
 * Norwegian: {{t|no|kjempe for}}
 * Persian: {{t+|fa|تلاش کردن|tr=talâš kardan}}
@@ -208,7 +208,7 @@ The noun is from {{inh|en|ang|feoht}}, from the verb; compare Dutch {{m|nl|gevec
 * Finnish: {{t+|fi|taistella}}
 * Hebrew: {{t+|he|נלחם|tr=nilkhám}}
 * Icelandic: {{t|is|heyja}}
-* Japanese: {{t+|ja|戦う|sc=Jpan}}, {{t+|ja|闘う|tr=[[たたかう]], tatakau|sc=Jpan}}
+* Japanese: {{t+|ja|戦う|tr=たたかう, tatakau|sc=Jpan}}, {{t+|ja|闘う|tr=たたかう, tatakau|sc=Jpan}}
 * Maori: {{t|mi|āpiti }} {{qualifier|at close quarters}}
 {{trans-mid}}
 * Norwegian: {{t+|no|slåss}}
@@ -240,8 +240,8 @@ The noun is from {{inh|en|ang|feoht}}, from the verb; compare Dutch {{m|nl|gevec
 * Icelandic: {{t+|is|berjast}} {{t+|is|við}}
 * Irish: {{t|ga|troid}}
 * Italian: {{t+|it|combattere}}
-* Japanese: {{t|ja|対決|tr=[[たいけつする]], taiketsu-suru|sc=Jpan}}, {{t+|ja|戦う|sc=Jpan}}, {{t+|ja|闘う|tr=[[たたかう]], tatakau|sc=Jpan}}
-* Khmer: {{t|km|ប្រយុទ្ឋ|tr=bprəyŭt|sc=Khmr}}
+* Japanese: {{t|ja|対決|tr=たいけつする, taiketsu suru|alt=対決する}}, {{t+|ja|戦う|tr=たたかう, tatakau|sc=Jpan}}, {{t+|ja|闘う|tr=たたかう, tatakau|sc=Jpan}}
+* Khmer: {{t|km|ប្រយុទ្ឋ}}
 {{trans-mid}}
 * Korean: {{t+|ko|싸우다}}
 * Latin: {{t|la|combattuo}}
