t+ky:[[согушуу]] t+ky:[[урушуу]] t-balance t+tg:[[ҷангидан]] t+tk:[[uruşmak]] t+ug:[[يېغىلاشماق]] t+ug:[[كۈرەشمەك]] ([[WT:EDIT|Assisted]]) <fight#52108808>

--- a/en/f/fight.6879.wikitext
+++ b/en/f/fight.6879.wikitext
@@ -111,6 +111,7 @@ The noun is from {{inh|en|ang|feoht}}, from the verb; compare Dutch {{m|nl|gevec
 * Korean: {{t+|ko|다투다}}, {{t+|ko|싸우다}}
 * Kurdish:
 *: Sorani: {{t|ku|شه‌ڕ کردن|tr=shaR kirdin|sc=ku-Arab}}
+* Kyrgyz: {{t+|ky|согушуу}}, {{t+|ky|урушуу}}
 * Lao: {{t|lo|ຕໍ່ສູ້}}, {{t|lo|ຮົບ}}
 * Latgalian: {{t|ltg|sistīs}}, {{t|ltg|ceikstētīs}}, {{t|ltg|veiktīs}}
 * Latin: {{t|la|pugnō}}, {{t|la|dīmicō}}, {{t|la|luctor}}
@@ -151,13 +152,16 @@ The noun is from {{inh|en|ang|feoht}}, from the verb; compare Dutch {{m|nl|gevec
 * Swahili: {{t+|sw|vita}}
 * Swedish: {{t+|sv|strida}}, {{t+|sv|slåss}}, {{t+|sv|kämpa}}
 * Tagalog: {{t|tl|awayin}}, {{t|tl|warlahin}}
+* Tajik: {{t|tg|ҷангидан}}
 * Thai: {{t+|th|สู้}}, {{t+|th|ต่อสู้}}, {{t+|th|รบ}}
 * Tibetan: {{t|bo|རྒྱ་འདྲེ|sc=Tibt}}
 * Tok Pisin: {{t|tpi|paitim}}
 * Turkish: {{t+|tr|savaşmak}}, {{t+|tr|dövüşmek}}
+* Turkmen: {{t|tk|uruşmak}}
 * Tuvan: {{t|tyv|демисежир}}
 * Ukrainian: {{t+|uk|би́тися|impf|sc=Cyrl}}; {{t+|uk|боро́тися|impf|sc=Cyrl}}, {{t|uk|воюва́ти|impf|sc=Cyrl}}
 * Urdu: {{t|ur|لڑنا|tr=laṛnā|sc=ur-Arab}}, {{t|ur|جھگڑنا|tr=jhagaṛnā|sc=ur-Arab}}
+* Uyghur: {{t|ug|يېغىلاشماق}}, {{t|ug|كۈرەشمەك}}
 * Uzbek: {{t+|uz|urushmoq}}, {{t+|uz|kurashmoq}}
 * Vietnamese: {{t+|vi|chiến đấu}}
 * Welsh: {{t+|cy|brwydro}}
