t+ko:[[전투]] t-balance t+tg:[[мубориза]] t+fa:[[مبارزه]] ([[WT:EDIT|Assisted]]) <fight#52108939>

--- a/en/f/fight.6879.wikitext
+++ b/en/f/fight.6879.wikitext
@@ -437,16 +437,17 @@ The noun is from {{inh|en|ang|feoht}}, from the verb; compare Dutch {{m|nl|gevec
 * Icelandic: {{t+|is|bardagi|m}}
 * Italian: {{t+|it|battaglia|f}}, {{t+|it|combattimento|m}}
 * Japanese: {{t+|ja|戦闘|tr=せんとう, sentô|sc=Jpan}}
+* Korean: {{t+|ko|전투}}
+{{trans-mid}}
 * Kurdish:
 *: Sorani: {{t+|ku|شه‌ڕ|tr=şarr|sc=ku-Arab}}
-{{trans-mid}}
 * Latin: {{t+|la|pugna}}
 * Latvian: {{t|lv|kauja|f}}, {{t|lv|cīņa|f}}
 * Lithuanian: {{t+|lt|kova|f}}, {{t|lt|mūšis|m}}
 * Macedonian: {{t|mk|битка|f|sc=Cyrl}}, {{t|mk|бој|m|sc=Cyrl}}
 * Norman: {{t|nrf|batâle|f}}
 * Norwegian: {{t+|no|slag}}
-* Persian: {{t+|fa|پیکار|tr=peykâr}} {{qualifier|archaic}}, {{t+|fa|نبرد|tr=nabard}}
+* Persian: {{t+|fa|پیکار|tr=peykâr}} {{qualifier|archaic}}, {{t+|fa|نبرد|tr=nabard}}, {{t+|fa|مبارزه|tr=mobâreze}}
 * Pijin: {{t|pis|faet}}
 * Polish: {{t+|pl|bój|m}}, {{t+|pl|bitwa|f}}, {{t+|pl|batalia|f}}
 * Portuguese: {{t+|pt|batalha|f}}, {{t+|pt|luta|f}}
@@ -456,6 +457,7 @@ The noun is from {{inh|en|ang|feoht}}, from the verb; compare Dutch {{m|nl|gevec
 * Slovak: {{t+|sk|bitva|f}}, {{t|sk|boj|m}}
 * Swahili: {{t+|sw|vita}}
 * Swedish: {{t+|sv|strid}}, {{t+|sv|kamp}}
+* Tajik: {{t+|tg|мубориза}}
 * Tamil: {{t+|ta|சண்டை|sc=Taml}}
 * Tok Pisin: {{t|tpi|pait}}
 * Turkish: {{t+|tr|savaş}}
