--- a/en/映/映.16968.wikitext
+++ b/en/映/映.16968.wikitext
@@ -110,6 +110,6 @@ The ''[[漢音#Japanese|kan'on]]'' pronunciation, so likely a later borrowing.
 ==Vietnamese==
 
 ===Han character===
-{{vi-hantu|[[ánh]], [[tử]]|rs=日05}}
+{{vi-hantu|[[ánh]]|rs=日05}}
 
 # {{defn|lang=vi|sort=日05}}
