--- a/en/c/count.8441.wikitext
+++ b/en/c/count.8441.wikitext
@@ -366,6 +366,7 @@ Borrowed from {{bor|en|xno|conte}} and {{bor|en|fro|comte||count}}, from {{der|e
 * Latin: {{t|la|comes|m}}
 * Latvian: {{t|lv|grāfs|m}}
 * Lithuanian: {{t|lt|grafas|m}}
+* Manchu: {{t|mnc|ᠪᡝ}}
 * Macedonian: {{t|mk|гроф|m|tr=grof}}
 * Marathi: {{t|mr|काउन्ट|m|tr=kāunṭa|sc=Deva}}
 * Norwegian:
