--- a/en/c/cost.6840.wikitext
+++ b/en/c/cost.6840.wikitext
@@ -16,7 +16,8 @@ From {{etyl|enm|en}} {{m|enm|costen}}, from {{etyl|fro|en}} {{m|fro|coster}}, {{
 {{en-verb|costs|costing|cost|past2=costed}}
 
 # To [[incur]] a [[charge]] of; to require payment of a (specified) [[price]].
-#: {{ux|en|This shirt '''cost''' $50, while this was cheaper at only $30.}}
+#:{{ux|en|This shirt '''costs''' $50, while this was cheaper at only $30.
+}}
 #: {{ux|en|It will '''cost''' you a lot of money to take a trip around the world.}}
 #* {{RQ:BLwnds TLdgr|I|0016}}
 #*: Thus the red damask curtains which now shut out the fog-laden, drizzling atmosphere of the Marylebone Road, had '''cost''' a mere song, and yet they might have been warranted to last another thirty years. A great bargain also had been the excellent Axminster carpet which covered the floor;{{nb...}}.
