--- a/en/v/vomit.8434.wikitext
+++ b/en/v/vomit.8434.wikitext
@@ -32,6 +32,8 @@ From {{inh|en|enm|vomiten}}, from {{der|en|la|vomitāre}}, present active infini
 ====Synonyms====
 * {{l|en|barf}}
 * {{l|en|chunder}}
+* {{l|en|hurl}}
+* {{l|en|puke}}
 * {{l|en|sick}}
 * {{l|en|throw up}}
 * See also [[Thesaurus:regurgitate]]
