--- a/en/星/星.16967.wikitext
+++ b/en/星/星.16967.wikitext
@@ -241,6 +241,6 @@ The {{m|en|Singapore}} sense derives from the pre-[[World War Two]] kanji spelli
 ==Vietnamese==
 
 ===Han character===
-{{vi-hantu|[[tinh]], [[tình]]|rs=日05}}
+{{vi-hantu|[[tinh]]|rs=日05}}
 
 # {{defn|lang=vi|sort=日05}}
