--- a/en/昵/昵.16990.wikitext
+++ b/en/昵/昵.16990.wikitext
@@ -1,15 +1,12 @@
-{{also|暱}}
+{{also|暱|眤}}
 {{character info/new}}
 ==Translingual==
-
-===Etymology===
-{{Han etym}}
 
 ===Han character===
 {{Han char|rn=72|rad=日|as=05|sn=9|four=67011|canj=ASP|ids=⿰日尼}}
 
-# [[intimate]], [[close]]
-# [[approach]]
+====Related characters====
+* {{l|mul|暱}} {{q|[[Traditional Chinese]]}}
 
 ====References====
 {{Han ref|kx=0494.070|dkj=13866|dj=0858.130|hdz=21504.020|uh=6635}}
@@ -18,29 +15,55 @@
 
 ==Chinese==
 
+===Glyph origin===
+{{Han etym}}
+
 ===Etymology 1===
 {{zh-see|暱}}
 
 ===Etymology 2===
-{{zh-forms}}
+{{zh-forms|alt=眤,𣆓}}
 
 ====Pronunciation====
 {{zh-pron
-|m=zhí
-|c=
+|m=nì
+|c=nik1,nik6
 |h=pfs=
 |md=
 |mn=
 |w=
 |mc=y
 |oc=y
-|cat=
+|cat=a,v
 }}
 
 ====Definitions====
 {{zh-hanzi}}
 
-# {{rfdef|lang=zh}}
+# {{zh-alt-form|暱*}}
+#* {{zh-x|性 忠正，以 社 稷 為 己任，帝 器 而 昵 之，政事 多 諮 焉。|ref=Jinshu}}
+#* {{zh-x|寇 所 從 來 若 昵 道、傒 近，若 城 場，皆 為 扈 樓。|ref=Mozi}}
+
+====Compounds====
+{{zh-der|昵交|昵友|昵愛|昵昵|昵比|昵聲|昵藩|狎昵|親昵|密昵}}
+
+===Etymology 3===
+{{zh-forms|alt=𣽚}}
+
+====Pronunciation====
+{{zh-pron
+|m=zhí
+|c=
+|mc=
+|oc=
+|cat=v
+}}
+
+====Definitions====
+{{zh-hanzi}}
+
+# {{†}} to [[glue]]
+#* {{zh-x|鹿 膠 青 白，馬 膠 赤 白，牛 膠 火 赤，鼠 膠 黑，魚 膠 餌，犀 膠 黃。凡 昵 之 類 不能 方。|ref=Zhouli}}
 
 ===References===
 * {{R:twedu|B01535}}
@@ -52,7 +75,7 @@
 ===Kanji===
 {{ja-kanji|grade=|rs=日05}}
 
-# {{defn|lang=ja|sort=日05}}
+# [[intimate]]; [[close#Adjective|close]]; [[familiar]]
 
 ====Readings====
 {{ja-readings
@@ -60,12 +83,26 @@
 |kun=ちかずく
 }}
 
+====Compounds====
+{{der-top3|Compounds}}
+* {{ja-r|昵%近|じっ%きん|[[familiarity]]; [[closeness]]}}
+* {{ja-r|昵%懇|じっ%こん|[[intimacy]]; [[familiarity]]}}
+{{der-bottom}}
 ----
 
 ==Korean==
 
-===Hanja===
-{{ko-hanja|hangeul=[[닐]]>[[일]], [[녜]]>[[예]]|eumhun=|rv=nil>il, nye>ye|mr=nil>il, nye>mye|y=nil>il, nyey>yey}}
+===Etymology 1===
+
+====Hanja====
+{{ko-hanja|닐||일}}
+
+# {{defn|lang=ko|sort=日05}}
+
+===Etymology 2===
+
+====Hanja====
+{{ko-hanja|아비사당|녜||예}}
 
 # {{defn|lang=ko|sort=日05}}
 
@@ -74,9 +111,11 @@
 ==Vietnamese==
 
 ===Han character===
-{{vi-readings|rs=日05|reading=nặc}}
+{{vi-readings|rs=日05
+|hanviet=nặc-gdhn
+}}
 
 # {{defn|lang=vi|sort=日05}}
 
-====References====
-* [http://nomfoundation.org/common/nom_details.php?codepoint=6635 Nom Foundation]
+===References===
+<references/>
