--- a/en/c/catch.6830.wikitext
+++ b/en/c/catch.6830.wikitext
@@ -304,7 +304,7 @@ Noah Webster's ''American Dictionary'' (1828) regards /kɛtʃ/ as the "popular o
 ##: {{ux|en|Did you '''catch''' his name?&emsp; {{nowrap|Did you '''catch''' the way she looked at him?}}}}
 ##* {{RQ:Chmbrs YngrSt|IX}}
 ##*: “A tight little craft,” was Austin’s invariable comment on the matron;{{nb...}}. ¶ Near her wandered her husband, orientally bland, invariably affable, and from time to time squinting sideways, as usual, in the ever-renewed expectation that he might '''catch''' a glimpse of his stiff, retroussé moustache.
-## {{lb|en|transitive}} To [[take in]]; to [[watch]] or [[listen to]] (an entertainment). {{defdate|from 20<sup>th</sup>c.}}
+## {{lb|en|transitive|informal}} To [[take in]]; to [[watch]] or [[listen]] to (an entertainment). {{defdate|from 20<sup>th</sup>c.}}
 ##: {{ux|en|I have some free time tonight so I think I'll '''catch''' a movie.}}
 ## {{lb|en|transitive}} To [[reproduce]] or [[echo]] a spirit or idea faithfully. {{defdate|from 17<sup>th</sup>c.}}
 ##: {{ux|en|You've really '''caught''' his determination in this sketch.}}
