--- a/en/g/Germany.2103.wikitext
+++ b/en/g/Germany.2103.wikitext
@@ -33,7 +33,7 @@ From {{etyl|enm|en}} {{m|enm|Germanie}}, from {{etyl|ang|en}} {{m|ang|Germania}}
 #* {{quote-web|lang=en|author=Klaus Wiegrefe|authorlink=de:Klaus Wiegrefe|url=http://www.spiegel.de/international/germany/germany-s-unlikely-diplomatic-triumph-an-inside-look-at-the-reunification-negotiations-a-719848-druck.html|archiveurl=http://web.archive.org/web/20120627082630/http://www.spiegel.de:80/international/germany/germany-s-unlikely-diplomatic-triumph-an-inside-look-at-the-reunification-negotiations-a-719848-druck.html|archivedate=June 27. 2012|work={{w|Spiegel Online}}|date=September 29, 2010|title=Germany's Unlikely Diplomatic Triumph: An Inside Look at the Reunification Negotiations|passage=It is the fall of 1989, and two time zones farther to the west, thousands of people march through downtown Leipzig every Monday, while more than 6,000 East German citizens are camped out in the embassies of West '''Germany''' in Prague and Warsaw, hoping to be allowed to emigrate. The images have circled the globe, and it is clear to leaders Thatcher and Gorbachev that the two '''Germanys''' are on the verge of radical change.}}
 
 ====Usage notes====
-In its present use, "Germany" almost always refers to the [[Federal Republic of Germany]].<ref name=oed/> Historically, the extent of "Germany" was a contentious issue known in the 19th century as "{{w|The German Question}}". The political area considered "Germany" might include or exclude areas such as [[Prussia]], [[Austria]], [[Bohemia]], or [[Switzerland]] depending on the speaker and context. The area more often described an ethnic region than a polity into the 16th century. In Old English, it was even occasionally used to refer to areas of [[England]] held by the [[Saxons]], [[Angles]], etc.<ref name=oed/> The medieval "Kingdom of Germany" is an English anachronism translating the {{cog|la|rex}} {{m|la|Teutonicorum}} ("king of the [[Teutons]]"), which was initially used as a derogatory exonym before being adopted as a formal title of the Holy Roman Emperors in the early Modern period. The title adopted by the medieval Central European rulers themselves was {{m|la|rex}} {{m|la|Romanorum}} ("king of the [[Romans]]").
+In its present use, "Germany" almost always refers to the [[Federal Republic of Germany]].<ref name=oed/> Historically, the extent of "Germany" was a contentious issue known in the 19th century as "{{w|The German Question}}". The political area considered "Germany" might include or exclude areas such as [[Prussia]], [[Austria]], [[Bohemia]], or [[Switzerland]] depending on the speaker and context. The area more often described an ethnic region than a polity into the 16th century. In Old English, it was even occasionally used to refer to areas of [[England]] held by the [[Saxons]], [[Angles]], etc.<ref name=oed/> The medieval "Kingdom of Germany" is an English anachronism translating the {{cog|la|rex}} {{m|la|Teutonicorum}} ("king of the [[Teutons]]"), which was initially used as a derogatory exonym before being adopted as a formal title of the Holy Roman Emperors in the early Modern period. The title adopted by the medieval Central European rulers themselves was {{m|la|rex}} {{m|la|Romanorum}} ("king of the [[Romans]]"). Prior to [[w:German reunification|1990]], both the current [[Federal Republic of Germany]] and then extant [[German Democratic Republic]] were referred to as Germany especially when talking about the two countries collectively or in relation to reunification.
 
 ====Synonyms====
 * {{sense|present state}} {{l|en|Federal Republic of Germany}} ([[FRG]], [[BRD]]), [[German]] [[republic|Republic]]
