/* Pronunciation 2 */; to [[dislike]]  #* {{zh-x|死 亦 我 所 惡，所 惡 有 甚 於 死 者，故 患 有 所 不 辟 也。|I '''dislike''' death indeed, but there is that which I '''dislike''' more than death, and therefore there are occasions when I will not avoid danger.|ref=Mencius-L|3=CL}} <惡#52178929>

--- a/en/惡/惡.15606.wikitext
+++ b/en/惡/惡.15606.wikitext
@@ -75,8 +75,9 @@
 ====Definitions====
 {{zh-hanzi}}
 
-# to [[hate]]; to [[loathe]]
+# to [[hate]]; to [[loathe]]; to [[dislike]]
 #: {{zh-x|厭惡|to loathe}}
+#* {{zh-x|死 亦 我 所 惡，所 惡 有 甚 於 死 者，故 患 有 所 不 辟 也。|I '''dislike''' death indeed, but there is that which I '''dislike''' more than death, and therefore there are occasions when I will not avoid danger.|ref=Mencius-L|3=CL}}
 
 ====Compounds====
 {{zh-der|fold=1|惡濕居下|交惡|善善惡惡|愛遠惡近|好善惡惡|惡醉強酒|惡紫奪朱|惡直醜正|惡惡從短|惡惡|厭惡|好生惡殺|惡嫌|嫌好道惡|好諛惡直|好惡|可惡|好逸惡勞|痛惡|憎惡|深惡痛嫉|深惡痛絕|畏影惡跡|戀生惡死|欣生惡死|羞惡|貪生惡死}}
