--- a/en/s/secretary.7224.wikitext
+++ b/en/s/secretary.7224.wikitext
@@ -69,7 +69,7 @@ From {{etyl|ML.|en}} {{m|la|secretarius||one entrusted with secrets}}, from {{et
 * Italian: {{t+|it|segretario|m}}
 * Japanese: {{t+|ja|秘書|tr=ひしょ, hisho}}
 * Kazakh: {{t|kk|хатшы}}
-* Khmer: {{t+|km|ស្មៀន|tr=smien}}
+* Khmer: {{t+|km|ស្មៀន}}
 * Korean: {{t+|ko|비서}} ({{t+|ko|秘書}})
 * Kurdish:
 *: Central Kurdish: {{t|ckb|سکرتێر|tr=sikirtaer}}
