--- a/en/s/secretary.7224.wikitext
+++ b/en/s/secretary.7224.wikitext
@@ -153,6 +153,7 @@ From {{etyl|ML.|en}} {{m|la|secretarius||one entrusted with secrets}}, from {{et
 * Telugu: {{t+|te|కార్యదర్శి}}
 * Thai: {{t+|th|รัฐมนตรี}}
 * Tok Pisin: {{t|tpi|sekreteri}}
+* Vietnamese: {{t|vi|bộ trưởng}}
 {{trans-bottom}}
 
 {{trans-top|leading or managerial position in certain organizations}}
