/* Translations */ splitting ambiguous table into 2, moved translations to t-check <brick#52261226>

--- a/en/b/brick.7395.wikitext
+++ b/en/b/brick.7395.wikitext
@@ -86,11 +86,11 @@ From {{der|en|fr|briche}}, {{m|fr|brique||brick}}, probably from a {{der|en|gem}
 * Azerbaijani: {{t+|az|kərpic}}
 * Bashkir: {{t|ba|кирбес|sc=Cyrl}}
 * Basque: {{t|eu|adreilu}}
-* Belarusian: {{t|be|цэ́гла|f|sc=Cyrl}}
-* Bengali: {{t+|bn|ইট|tr=iţ|sc=Beng}}
+* Belarusian: {{t|be|цэ́гла|f}}
+* Bengali: {{t+|bn|ইট|tr=iţ}}
 * Breton: {{t+|br|brikenn|f}}
-* Bulgarian: {{t+|bg|ту́хла|f|sc=Cyrl}}
-* Burmese: {{t+|my|အုတ်|sc=Mymr}}
+* Bulgarian: {{t+|bg|ту́хла|f}}
+* Burmese: {{t+|my|အုတ်}}
 * Catalan: {{t+|ca|maó|m}}
 * Chechen: {{t|ce|кибарчиг}}
 * Cherokee: {{t|chr|ᏗᏛᏓᏅᎯ}}
@@ -127,8 +127,8 @@ From {{der|en|fr|briche}}, {{m|fr|brique||brick}}, probably from a {{der|en|gem}
 * Gujarati: {{t|gu|ઈંટ|f}}
 * Hausa: {{t|ha|tubali|m}}
 * Hawaiian: {{t|haw|winihapa}}
-* Hebrew: {{t+|he|לְבֵנָה|f|tr=l'véna|sc=Hebr}}
-* Hindi: {{t+|hi|ईंट|f|sc=Deva}}
+* Hebrew: {{t+|he|לְבֵנָה|f|tr=l'véna}}
+* Hindi: {{t+|hi|ईंट|f}}
 * Hungarian: {{t+|hu|tégla}}
 * Icelandic: {{t+|is|múrsteinn|m}}, {{t|is|tígulsteinn|m}} {{qualifier|rare}}, {{t|is|leirsteinn|m}} {{qualifier|rare}}
 * Ido: {{t+|io|briko}}
@@ -141,7 +141,7 @@ From {{der|en|fr|briche}}, {{m|fr|brique||brick}}, probably from a {{der|en|gem}
 * Japanese: {{t+|ja|煉瓦|tr=れんが, renga}}
 * Javanese: {{t+|jv|bata}}
 * Kalmyk: {{t|xal|кирпич}}
-* Kannada: {{t+|kn|ಇಟ್ಟಿಗೆ|sc=Knda}}
+* Kannada: {{t+|kn|ಇಟ್ಟಿಗೆ}}
 * Kazakh: {{t+|kk|кірпіш|sc=Cyrl}}
 * Khmer: {{t+|km|ឥដ្ឋ}}
 * Korean: {{t+|ko|벽돌}}
@@ -162,7 +162,7 @@ From {{der|en|fr|briche}}, {{m|fr|brique||brick}}, probably from a {{der|en|gem}
 * Lithuanian: {{t|lt|plyta|f}}
 * Low German: {{t|nds|Backsteen|m}}
 * Luxembourgish: {{t|lb|Zill|f}}
-* Macedonian: {{t|mk|цигла|f|sc=Cyrl}}, {{t|mk|тула|f|sc=Cyrl}}
+* Macedonian: {{t|mk|цигла|f}}, {{t|mk|тула|f}}
 * Maithili: {{t|mai|पजेबा|tr=pajēbā}}
 * Malagasy: {{t+|mg|biriky}}
 * Malay: {{t|ms|batu bata}}
@@ -183,7 +183,7 @@ From {{der|en|fr|briche}}, {{m|fr|brique||brick}}, probably from a {{der|en|gem}
 * Occitan: {{t|oc|brica|f}}
 * Okinawan: {{t|ryu|煉瓦|tr=りんぐぁ, ringwa}}
 * Old English: {{t|ang|tiġele|f}}
-* Oriya: {{t+|or|ଇଟା|sc=Orya}}
+* Oriya: {{t+|or|ଇଟା}}
 * Ossetian: {{t|os|агуыридур|sc=Cyrl}}
 * Pali: {{t|pi|iṭṭhaka|f}}, {{t|pi|giñjakā|f}}
 * Papiamentu: {{t|pap|klenku}}
@@ -207,7 +207,7 @@ From {{der|en|fr|briche}}, {{m|fr|brique||brick}}, probably from a {{der|en|gem}
 *: Roman: {{t+|sh|cigla|f}}, {{t+|sh|opeka|f}}
 * Shan: {{t|shn|ဢုတ်ႇ}}
 * Sicilian: {{t+|scn|maduni|m}}
-* Sinhalese: {{t|si|ගඩොල්|sc=Sinh}}
+* Sinhalese: {{t|si|ගඩොල්}}
 * Slovak: {{t+|sk|tehla|f}}
 * Slovene: {{t+|sl|opeka|f}}, {{t|sl|zidak|m}}
 * Sorbian:
@@ -217,9 +217,9 @@ From {{der|en|fr|briche}}, {{m|fr|brique||brick}}, probably from a {{der|en|gem}
 * Swedish: {{t+|sv|tegel|n}}, {{t+|sv|tegelsten|c}}
 * Tagalog: {{t|tl|laryo}}, {{t|tl|ladrilyo}}
 * Tajik: {{t+|tg|хишт|sc=Cyrl}}
-* Tamil: {{t+|ta|செங்கல்|sc=Taml}}
+* Tamil: {{t+|ta|செங்கல்}}
 * Tatar: {{t+|tt|кирпеч|sc=Cyrl}}
-* Telugu: {{t+|te|ఇటుక|sc=Telu}}
+* Telugu: {{t+|te|ఇటుక}}
 * Thai: {{t+|th|อิฐ}}
 * Tibetan: {{t|bo|ས་ཕག}}
 * Tigrinya: {{t|ti|ሑጡብ}}
@@ -230,8 +230,8 @@ From {{der|en|fr|briche}}, {{m|fr|brique||brick}}, probably from a {{der|en|gem}
 * Tuvan: {{t|tyv|тууйбу}}
 * Udmurt: {{t|udm|кирпич}}
 * Ugaritic: {{t|uga|𐎍𐎁𐎐𐎚}}
-* Ukrainian: {{t+|uk|це́гла|f|sc=Cyrl}}
-* Urdu: {{t|ur|اینٹ|f|tr=īṇṭ|sc=ur-Arab}}
+* Ukrainian: {{t+|uk|це́гла|f}}
+* Urdu: {{t|ur|اینٹ|f|tr=īṇṭ}}
 * Uyghur: {{t|ug|خىش}}
 * Uzbek: {{t+|uz|gʻisht}}
 * Venetian: {{t|vec|quareło|m}}
@@ -243,7 +243,7 @@ From {{der|en|fr|briche}}, {{m|fr|brique||brick}}, probably from a {{der|en|gem}
 * West Frisian: {{t|fy|bakstein|c}}
 * White Hmong: {{t|mww|thwv cib}}
 * Yakut: {{t|sah|кирпииччэ}}
-* Yiddish: {{t|yi|ציגל|n|sc=Hebr}}
+* Yiddish: {{t|yi|ציגל|n}}
 * Zhuang: {{t|za|cien}}
 * Zulu: {{t|zu|isitini|c7|c8}}
 {{trans-bottom}}
@@ -254,7 +254,7 @@ From {{der|en|fr|briche}}, {{m|fr|brique||brick}}, probably from a {{der|en|gem}
 * Asturian: {{t|ast|lladriyu|m}}
 * Bashkir: {{t|ba|кирбес|sc=Cyrl}}
 * Basque: {{t|eu|adreilu}}
-* Bulgarian: {{t+|bg|ту́хла|f|sc=Cyrl}}
+* Bulgarian: {{t+|bg|ту́хла|f}}
 * Catalan: {{t+|ca|maó|m}}
 * Chinese:
 *: Mandarin: {{t+|cmn|磚塊|sc=Hani}}, {{t+|cmn|砖块|tr=zhuānkuài|sc=Hani}}, {{t+|cmn|磚頭|sc=Hani}}, {{t+|cmn|砖头|tr=zhuāntóu|sc=Hani}}
@@ -274,7 +274,7 @@ From {{der|en|fr|briche}}, {{m|fr|brique||brick}}, probably from a {{der|en|gem}
 * Irish: {{t|ga|bríce|m}}
 * Japanese: {{t+|ja|煉瓦|tr=れんが, renga}}
 * Latvian: {{t|lv|ķieģelis|m}}
-* Macedonian: {{t|mk|ци́гла|f|sc=Cyrl}}, {{t|mk|ту́ла|f|sc=Cyrl}}
+* Macedonian: {{t|mk|ци́гла|f}}, {{t|mk|ту́ла|f}}
 * Okinawan: {{t|ryu|煉瓦|tr=りんぐぁ, ringwa}}
 * Old English: {{t|ang|tiġele|f}}
 * Polish: {{t+|pl|cegła|f}}
@@ -300,35 +300,33 @@ From {{der|en|fr|briche}}, {{m|fr|brique||brick}}, probably from a {{der|en|gem}
 * Russian: {{t+|ru|молото́к|m}}
 {{trans-bottom}}
 
-{{trans-top|electronic device}}
-* Arabic: {{t-needed|ar}}
-* Armenian: {{t|hy|բրիք}}
-* Chinese:
-*: Mandarin: {{t+|cmn|磚頭|sc=Hani}}, {{t+|cmn|砖头|tr=zhuāntóu|sc=Hani}}
-* Czech: {{t+|cs|cihla|f}}
-* Dutch: {{t+check|nl|koelkast|f}}
-* Finnish: {{t+|fi|tiili}}
-* French: {{t+|fr|brique|f}}
-* German: {{t|de|externes Netzteil|n}}
+{{trans-top|an external power supply}}
 {{trans-mid}}
-* Hindi: {{t-needed|hi}}
-* Italian: {{t-needed|it}}
-* Japanese: {{t-needed|ja}}
-* Korean: {{t-needed|ko}}
-* Portuguese: {{t+|pt|tijolo|m}}
-* Russian: {{t+|ru|кирпи́ч|m}}
-* Spanish: {{t|es|dispositivo electronico}}
-* Vietnamese: {{t|vi|cục gạch}}
 {{trans-bottom}}
 
-{{checktrans-top|}}
-* Breton: {{t+check|br|brikenn|f}}
-* Ido: {{t+check|io|briko}}
-* Romanian: {{t+check|ro|cărămidă|f}}
+{{trans-top|a heavy electronic device that has become obsolete}}
 {{trans-mid}}
+{{trans-bottom}}
+
+{{checktrans-top}}
+* Armenian: {{t-check|hy|բրիք}}
+* Breton: {{t+check|br|brikenn|f}}
+* Chinese:
+*: Mandarin: {{t+check|cmn|磚頭|sc=Hani}}, {{t+|cmn|砖头|tr=zhuāntóu|sc=Hani}}
+* Czech: {{t+check|cs|cihla|f}}
+* Dutch: {{t+check|nl|koelkast|f}}
+* Finnish: {{t+check|fi|tiili}}
+* French: {{t+|fr|brique|f}}
+* German: {{t-check|de|[[externes]] [[Netzteil]]|n}}
+* Ido: {{t+check|io|briko}}
+{{trans-mid}}
+* Portuguese: {{t+check|pt|tijolo|m}}
+* Romanian: {{t+check|ro|cărămidă|f}}
+* Russian: {{t+check|ru|кирпи́ч|m}}
 * Swahili: {{t-check|sw|tofali}}, {{t-check|sw|matofali|p}} (1, 2) {{qualifier|noun 5/6}}
 * Telugu: {{t+check|te|ఇటుక|sc=Telu}} (1, 2)
 * Ukrainian: {{t+check|uk|цеглина|f|sc=Cyrl}} (1)
+* Vietnamese: {{t-check|vi|cục gạch}}
 {{trans-bottom}}
 
 ===Adjective===
