--- a/en/星/星.16967.wikitext
+++ b/en/星/星.16967.wikitext
@@ -155,6 +155,21 @@ From {{inh|ja|ojp|sort=ほし|-}}, from {{inh|ja|jpx-pro|sort=ほし|*pəsi}}. F
 |volume=6
 |isbn=4-06-334835-0}}
 #*: {{ja-usex|——海の'''星'''海%王%星を守%護にもつ深%海の戦%士——セーラーネプチューン|——^うみ の '''^ほし''' ^かい%おう%せい を しゅ%ご に もつ しん%かい の せん%し ——^セーラー ^ネプチューン|——Warrior of the depths, keeper of Neptune the Sea '''Planet''' ——Sailor Neptune}}{{ja-usex|そして——風の'''星'''天%王%星を守%護にもつ天%空の戦%士　セーラーウラヌス　参%上！|^そして ——^かぜ の '''^ほし''' ^てん%のう%せい を しゅ%ご に もつ てん%くう の せん%し　^セーラー ^ウラヌス　さん%じょう！|And I am ——the warrior of the ether, keeper of Uranus the Wind '''Planet'''. Sailor Uranus enters the scene!}}
+#* {{quote-book
+|lang=ja
+|location=Tokyo
+|publisher=Shueisha
+|authorlink=Nobuhiro Watsuki
+|first=Nobuhiro
+|last=Watsuki
+|||{{wj|武装錬金|[武](ブ)[装](ソウ)[錬](レン)[金](キン)}}
+|trans-title={{w|Buso Renkin|Armed Alchemy}}
+|date=Nov 9 2005
+|isbn=4-08-873851-9
+|volume=3
+|chapter={{lj|[武](ブ)[装](ソウ)[錬](レン)[金](キン)ファイナル}}
+|trans-chapter=Armed Alchemy Final}}
+#*: {{ja-usex|………その覚%悟　一%体どこから……？|………^その かく%ご　^いっ%たい どこ から……？|………Such resolve. Where did you get it from……？}}{{ja-usex|もちろん！あの'''惑%星'''から　あそこには守りたい人%達が大%勢いる　一%番…守りたい人がいる|^もちろん！^あの '''ほ%し''' から　^あそこ に は まもりたい ひと%たち が おお%ぜい いる　^いち%ばん… まもりたい ひと が いる|Of course! From that planet. Where there are many people I have to protect. But most of all… where there’s the one person I have to protect.}}
 
 =====Derived terms=====
 {{der-top}}
