--- a/en/星/星.16967.wikitext
+++ b/en/星/星.16967.wikitext
@@ -169,7 +169,7 @@ From {{inh|ja|ojp|sort=ほし|-}}, from {{inh|ja|jpx-pro|sort=ほし|*pəsi}}. F
 |volume=3
 |chapter={{lj|[武](ブ)[装](ソウ)[錬](レン)[金](キン)ファイナル}}
 |trans-chapter=Armed Alchemy Final}}
-#*: {{ja-usex|………その覚%悟　一%体どこから……？|………^その かく%ご　^いっ%たい どこ から……？|………Such resolve. Where did you get it from……？}}{{ja-usex|もちろん！あの'''惑%星'''から　あそこには守りたい人%達が大%勢いる　一%番…守りたい人がいる|^もちろん！^あの '''ほ%し''' から　^あそこ に は まもりたい ひと%たち が おお%ぜい いる　^いち%ばん… まもりたい ひと が いる|Of course! From that planet. Where there are many people I have to protect. But most of all… where there’s the one person I have to protect.}}
+#*: {{ja-usex|………その覚%悟　一%体どこから……？|………^その かく%ご　^いっ%たい どこ から……？|………Such resolve. Where did you get it from……？}}{{ja-usex|もちろん！あの'''惑%星'''から　あそこには守りたい人%達が大%勢いる　一%番…守りたい人がいる|^もちろん！^あの '''ほ%し''' から　^あそこ に は まもりたい ひと%たち が おお%ぜい いる　^いち%ばん… まもりたい ひと が いる|Of course! From that planet. Where there are many people I sworn to protect. But most of all… where there’s the one person I sworn to protect.}}
 
 =====Derived terms=====
 {{der-top}}
