--- a/en/星/星.16967.wikitext
+++ b/en/星/星.16967.wikitext
@@ -133,16 +133,16 @@ From {{inh|ja|ojp|sort=ほし|-}}, from {{inh|ja|jpx-pro|sort=ほし|*pəsi}}. F
 # a [[star]]
 #: {{ja-usex|数え切れないくらいたくさんの'''星'''が輝いている|かぞえきれない くらい たくさん の '''ほし''' が かがやいて いる|an endless number of '''stars''' are shining}}
 #* {{quote-book|date=May 2 2014|||publisher={{w|Wizards of the Coast}}|{{lang|ja|ニクスへの旅}}|chapter={{ruby|{{lang|ja|レオニンの[偶](ぐう)[像](ぞう)[破](は)[壊](かい)[者](しゃ)}}}}|trans-chapter=Leonin Iconoclast|||trans-title=Journey into Nyx|lang=ja}}
-#*: {{ja-usex|「'''星%々'''は夜%空にあるべきです。ここは我%々の世%界。そして我%々の事は我%々が決めます。」|「'''^ほし%ぼし''' は よ%ぞら に ある べき です。^ここ は われ%われ の せ%かい。^そして われ%われ の こと は われ%われ が きめます。」|“The '''stars''' belong in the night sky. This is our world. And we take matters into our own hands.”}}
+#*: {{ja-usex|「'''星%々'''は夜%空にあるべきです。ここは我%々の世%界。そして我%々の事は我%々が決めます。」|「'''^ほし%ぼし''' は よ%ぞら に ある べき です。^ここ は われ%われ の せ%かい。^そして われ%われ の こと は われ%われ が きめます。」|“The stars belong in the night sky. This is our world. And we take matters into our own hands.”}}
 # {{lb|ja|sort=ほし|tarot}} the [[star|Star]]
 # {{lb|ja|loosely}} a [[planet]]
 #* {{quote-book||
-|{{ruby|{{w2|ja|美少女戦士セーラームーン|[美少女戦士](Pretty Guardian)[セーラームーン](SAILORMOON)|sc=Jpan}}}}
+|{{wj|美少女戦士セーラームーン|[美少女戦士](Pretty Guardian)[セーラームーン](SAILORMOON)}}
 ||181–183
 |last=Takeuchi
 |first=Naoko
 |authorlink=Naoko Takeuchi
-|chapter={{ruby|{{lang|ja|[Act](アクト) [29](トゥエンティナイン)　[無](む)[限](げん)[３](スリー)　[２人](ふたり) [NEW](ニュー) [SOLDIERS](ソルジャーズ)}}}}
+|chapter={{lj|[Act](アクト) [29](トゥエンティナイン)　[無](む)[限](げん)[３](スリー)　[２人](ふたり) [NEW](ニュー) [SOLDIERS](ソルジャーズ)}}
 |trans-chapter=Act 29: Infinity 3: 2 NEW SOLDIERS
 |trans-title={{w|Sailor Moon|Pretty Guardian SAILOR MOON}}
 |genre=fiction
@@ -154,7 +154,7 @@ From {{inh|ja|ojp|sort=ほし|-}}, from {{inh|ja|jpx-pro|sort=ほし|*pəsi}}. F
 |origdate=Jan 23 2004
 |volume=6
 |isbn=4-06-334835-0}}
-#*: {{ja-usex|——海の'''星'''海%王%星を守%護にもつ深%海の戦%士——セーラーネプチューン|——^うみ の '''^ほし''' ^かい%おう%せい を しゅ%ご に もつ しん%かい の せん%し ——^セーラー ^ネプチューン|——Warrior of the depths, keeper of Neptune the Sea '''Planet''' ——Sailor Neptune}}{{ja-usex|そして——風の'''星'''天%王%星を守%護にもつ天%空の戦%士　セーラーウラヌス　参%上！|^そして ——^かぜ の '''^ほし''' ^てん%のう%せい を しゅ%ご に もつ てん%くう の せん%し　^セーラー ^ウラヌス　さん%じょう！|And I am ——the warrior of the ether, keeper of Uranus the Wind '''Planet'''. Sailor Uranus enters the scene!}}
+#*: {{ja-usex|——海の'''星'''海%王%星を守%護にもつ深%海の戦%士——セーラーネプチューン|——^うみ の '''^ほし''' ^かい%おう%せい を しゅ%ご に もつ しん%かい の せん%し ——^セーラー ^ネプチューン|——Warrior of the depths, keeper of Neptune the Sea Planet ——Sailor Neptune}}{{ja-usex|そして——風の'''星'''天%王%星を守%護にもつ天%空の戦%士　セーラーウラヌス　参%上！|^そして ——^かぜ の '''^ほし''' ^てん%のう%せい を しゅ%ご に もつ てん%くう の せん%し　^セーラー ^ウラヌス　さん%じょう！|And I am ——the warrior of the ether, keeper of Uranus the Wind Planet. Sailor Uranus enters the scene!}}
 #* {{quote-book
 |lang=ja
 |location=Tokyo
