t+mnc:[[ᡳᠰᠠᡵᠠᡳᠯ]] ([[WT:EDIT|Assisted]]) <Israel#52299195>

--- a/en/i/Israel.2109.wikitext
+++ b/en/i/Israel.2109.wikitext
@@ -136,6 +136,7 @@ From {{etyl|enm|en}} {{m|enm|Israel}}, from {{etyl|ang|en}}, borrowed from {{ety
 * Malay: {{t|ms|Israel}}
 * Malayalam: {{t|ml|ഇസ്രയേൽ}}
 * Maltese: {{t|mt|Iżrael}}
+* Manchu: {{t|mnc|ᡳᠰᠠᡵᠠᡳᠯ}}
 * Mansoanka: {{t|msw|Israeli}}
 * Marathi: {{t|mr|इस्रायल}}, {{t|mr|इस्रायल}}
 * Meru: {{t|mer|Israel}}
