--- a/en/s/secretary.7224.wikitext
+++ b/en/s/secretary.7224.wikitext
@@ -57,7 +57,7 @@ From {{etyl|ML.|en}} {{m|la|secretarius||one entrusted with secrets}}, from {{et
 * Georgian: {{t|ka|მდივანი}}
 * German: {{t+|de|Sekretär|m}}, {{t+|de|Sekretärin|f}}
 * Greek: {{t+|el|γραμματέας|m|f}}
-*: Ancient Greek: {{t|grc|γραμματεύς|m}}
+*: Ancient: {{t|grc|γραμματεύς|m}}
 * Hebrew: {{t|he|מַזְכִּיר|m|tr=mazkir}}, {{t|he|מַזְכִּירָה|f|tr=mazkira}}
 * Hindi: {{t+|hi|सचिव|m}}
 * Hungarian: {{t+|hu|titkár}}, {{t+|hu|titkárnő}}, {{t+|hu|adminisztrátor}}
