--- a/en/c/cut.6843.wikitext
+++ b/en/c/cut.6843.wikitext
@@ -633,12 +633,12 @@ Displaced native Middle English [[snithen]] (from Old English [[sniþan]]) (comp
 {{en-noun}}
 [[File:Max-cut.svg|thumb|A '''cut''' (graph theory sense) in a graph with five vertices, which partitioned it into two subgroups (one with white vertices and another with black vertices).]]
 
-# An opening resulting from cutting.
-#: {{ux|en|Look at this '''cut''' on my finger!}}
-# The act of [[cutting]].
+# The act of cutting.
 #: {{ux|en|He made a fine '''cut''' with his sword.}}
 # The [[result]] of cutting.
 #: {{ux|en|a smooth or clear '''cut'''}}
+# An opening resulting from cutting; an [[incision]] or [[wound]].
+#: {{ux|en|Look at this '''cut''' on my finger!}}
 # A notch, passage, or channel made by cutting or digging; a furrow; a groove.
 #: {{ux|en|a '''cut''' for a railroad}}
 #* Knolles
@@ -685,39 +685,9 @@ Displaced native Middle English [[snithen]] (from Old English [[sniþan]]) (comp
 # {{lb|en|bodybuilding}} A time period when one tries to lose fat while retaining muscle mass.
 
 ====Derived terms====
-{{der3|en|title=Terms derived from ''cut'' (noun)|a cut above|a cut below|boot cut|bowl cut|brush cut|budget cut|crew cut|cut of one's jib|cut-set|die-cut|direct cut|director's cut|{{l|en|final cut}}, {{l|en|make the final cut}}|fine cut|French cut|{{l|en|jump cut}}, {{l|en|jump-cut}}|line cut|linocut|make the cut|maximum cut|minimum cut|pay cut|power cut|price cut|prime cut|princess cut|rose cut|shaggy cut|shortcut|s-t cut|tax cut|woodcut|α-cut}}
+{{der3|en|title=Terms derived from ''cut'' (noun)|a cut above|a cut below|boot cut|bowl cut|brush cut|budget cut|crew cut|cut of one's jib|cut-set|die-cut|direct cut|director's cut|final cut|fine cut|French cut|jump cut|line cut|linocut|make the cut|maximum cut|minimum cut|pay cut|power cut|price cut|prime cut|princess cut|rose cut|shaggy cut|shortcut|s-t cut|tax cut|woodcut|α-cut}}
 
 ====Translations====
-{{trans-top|opening resulting from cutting}}
-* Aromanian: {{t|rup|tãljiturã|f}}
-* Bulgarian: {{t+|bg|разрез|m}}
-* Danish: {{t|da|snitsår|n}}, {{t|da|skramme|c}}
-* Dutch: {{t+|nl|snee}}
-* Finnish: {{t+|fi|haava}}, {{t+|fi|viilto}}, {{t|fi|viiltohaava}}
-* French: {{t+|fr|coupure|f}}, {{t+|fr|entaille|f}}
-* Galician: {{t+|gl|corte|m}}
-* German: {{t+|de|Schnitt|m}}
-* Greek: {{t+|el|κόψιμο|n}}, {{t+|el|τομή|f}}
-*: Ancient Greek: {{t|grc|τομή|f}}
-* Hebrew: {{t+|he|חתך|m|tr=khétekh}}
-* Icelandic: {{t+|is|skurður|m}}
-* Italian: {{t+|it|taglio|m}}, {{t+|it|incisione|f}}
-{{trans-mid}}
-* Kurdish:
-*: Central Kurdish: {{t|ckb|برین}}
-* Maori: {{t|mi|motunga}}
-* Portuguese: {{t+|pt|corte|m}}
-* Romanian: {{t+|ro|tăietură|f}}, {{t+|ro|incizie|f}}
-* Russian: {{t+|ru|поре́з|m}} ''wound'', {{t+|ru|разре́з|m}}
-* Scottish Gaelic: {{t|gd|gearradh|m}}
-* Spanish: {{t+|es|corte|m}}
-* Sundanese: {{t|su|raheut}}
-* Swedish: {{t+|sv|skärsår|n}}
-* Tagalog: {{t|tl|hiwa}}
-* Turkish: {{t+|tr|kesik}}
-* Zazaki: {{t|zza|değiz}}
-{{trans-bottom}}
-
 {{trans-top|act of cutting}}
 * Bulgarian: {{t+|bg|рязане|n}}
 * Czech: {{t+|cs|řez}}, {{t|cs|říznutí}}
@@ -758,6 +728,36 @@ Displaced native Middle English [[snithen]] (from Old English [[sniþan]]) (comp
 * Scottish Gaelic: {{t|gd|gearradh|m}}
 * Spanish: {{t+|es|corte|m}}
 * Swedish: {{t+|sv|snitt|n}}
+{{trans-bottom}}
+
+{{trans-top|opening resulting from cutting}}
+* Aromanian: {{t|rup|tãljiturã|f}}
+* Bulgarian: {{t+|bg|разрез|m}}
+* Danish: {{t|da|snitsår|n}}, {{t|da|skramme|c}}
+* Dutch: {{t+|nl|snee}}
+* Finnish: {{t+|fi|haava}}, {{t+|fi|viilto}}, {{t|fi|viiltohaava}}
+* French: {{t+|fr|coupure|f}}, {{t+|fr|entaille|f}}
+* Galician: {{t+|gl|corte|m}}
+* German: {{t+|de|Schnitt|m}}
+* Greek: {{t+|el|κόψιμο|n}}, {{t+|el|τομή|f}}
+*: Ancient Greek: {{t|grc|τομή|f}}
+* Hebrew: {{t+|he|חתך|m|tr=khétekh}}
+* Icelandic: {{t+|is|skurður|m}}
+* Italian: {{t+|it|taglio|m}}, {{t+|it|incisione|f}}
+{{trans-mid}}
+* Kurdish:
+*: Central Kurdish: {{t|ckb|برین}}
+* Maori: {{t|mi|motunga}}
+* Portuguese: {{t+|pt|corte|m}}
+* Romanian: {{t+|ro|tăietură|f}}, {{t+|ro|incizie|f}}
+* Russian: {{t+|ru|поре́з|m}} ''wound'', {{t+|ru|разре́з|m}}
+* Scottish Gaelic: {{t|gd|gearradh|m}}
+* Spanish: {{t+|es|corte|m}}
+* Sundanese: {{t|su|raheut}}
+* Swedish: {{t+|sv|skärsår|n}}
+* Tagalog: {{t|tl|hiwa}}
+* Turkish: {{t+|tr|kesik}}
+* Zazaki: {{t|zza|değiz}}
 {{trans-bottom}}
 
 {{trans-top|notch, passage, or channel made by cutting or digging}}
