/* {{anchor|contract bridge}}Noun */ better way of anchoring <bridge#52319866>

--- a/en/b/bridge.7389.wikitext
+++ b/en/b/bridge.7389.wikitext
@@ -529,10 +529,10 @@ The verb is from {{der|en|enm|briggen}}, from {{der|en|ang|brycġian||to bridge,
 ===Etymology 2===
 From the earlier form (name of an older card game) ''biritch'', probably from {{der|en|ru|бири́ч}} (per the OED), or else from {{der|en|tr|bir}}-{{m|tr|üç}}, "one-three".<ref>"bridge." *OED 2nd edition. 1989. (online)</ref><ref>[http://www.etymonline.com/index.php?term=bridge "bridge."] Online Etymology Dictionary. 2008.</ref>
 
-===={{anchor|contract bridge}}Noun====
+====Noun====
 {{en-noun|-}}
 
-# {{lb|en|card games}} A [[card game]] played with four players playing as two teams of two players each.
+# {{senseid|en|game}} {{lb|en|card games}} A [[card game]] played with four players playing as two teams of two players each.
 #: ''Bidding is an essential element of the game of '''bridge'''.''
 
 =====Translations=====
