saw this one ⿰亻⿱⿳亠⿲丨二丨冖丁 <停#52327423>

--- a/en/停/停.11116.wikitext
+++ b/en/停/停.11116.wikitext
@@ -14,7 +14,7 @@
 ----
 
 ==Chinese==
-{{zh-forms||alt=仃-second round simplified}}
+{{zh-forms||alt=仃-second round simplified,⿰亻⿱⿳亠⿲丨二丨冖丁}}
 [[File:Stop sign China.svg|thumb|100px]]
 
 ===Glyph origin===
