t+ja:[[金髪]] ([[WT:EDIT|Assisted]]) <blond#52330157>

--- a/en/b/blond.6878.wikitext
+++ b/en/b/blond.6878.wikitext
@@ -157,6 +157,7 @@ Alternative etymology connects {{cog|frk|*blund}} to {{der|en|gem-pro|*blundaz|t
 * Indonesian: {{t+|id|pirang}}
 {{trans-mid}}
 * Irish: {{t|ga|fionn}}, {{t|ga|barrbhuí}}
+* Japanese: {{t+|ja|金髪|tr=kinpatsu}}
 * Khmer: {{t|km|សក់ទង់ដែង|tr=sɑk tʊəŋ daeŋ}}
 * Latin: {{t+|la|flāvus|m}}
 * Latvian: {{t|lv|gaišmatains}}, {{t|lv|blonds}}
