--- a/en/坩/坩.13036.wikitext
+++ b/en/坩/坩.13036.wikitext
@@ -46,14 +46,18 @@
 ===Kanji===
 {{ja-kanji|grade=|rs=土05}}
 
-# [[jar]]
-# [[pot]]
+# [[jar]], [[pot]]
 
 ====Readings====
-* {{ja-readings
-|goon=かん<かむ
-|kanon=かん<かむ
-|kun=つぼ-}}
+{{ja-readings
+|goon=かん<かん<かむ
+|kanon=かん<かん<かむ
+|kun=つぼ-
+}}
+
+====Compounds====
+* {{ja-r|坩堝|かんか}}
+* {{ja-r|坩堝|るつぼ}}
 
 ----
 
