--- a/en/垢/垢.13094.wikitext
+++ b/en/垢/垢.13094.wikitext
@@ -69,19 +69,29 @@
 * {{ja-r|目垢|めあか}}: [[rheum]]
 {{der-bottom}}
 
-===Etymology===
+===Etymology 1===
 {{ja-kanjitab|あか|yomi=k}}
 {{rfe|ja}}
 
-===Pronunciation===
+====Pronunciation====
 {{ja-pron|yomi=k|あか|acc=2|acc_ref=DJR,NHK}}
 
-===Noun===
+====Noun====
 {{ja-noun|あか}}
 
 # [[scum]]
 # [[dirt]]
-# {{lb|ja|slang|computing|sort=あか}} [[account]]
+
+===Etymology 2===
+{{ja-kanjitab|あか|yomi=k}}
+{{ateji}}, short for {{bor|ja|en|account}}.
+
+====Pronunciation====
+{{ja-pron|yomi=k|あか|acc=2|acc_ref=DJR,NHK}}
+
+====Noun====
+{{ja-noun|あか}}
+
 #: {{ja-usex|'''垢'''BAN|'''あか'''-バン|ban of one's account}}
 #* {{ja-usex|さっきプレミアム'''垢'''にしてきたので画質テスト版です。|^さっき プレミアム '''あか''' に してきた の で がしつ テスト ばん です。|I just made my account a premium '''account''', so this is a video quality test version.|ref=[http://www.nicovideo.jp/watch/sm27024908]}}
 
