t+sh:[[izabran]] t+sh:[[odabran]] ([[WT:EDIT|Assisted]]) <chosen#52346532>

--- a/en/c/chosen.6834.wikitext
+++ b/en/c/chosen.6834.wikitext
@@ -26,6 +26,7 @@
 *: Ancient: {{t|grc|ἐκλεκτός}}
 {{trans-mid}}
 * Latin: {{t|la|ēlectus}}
+* Serbo-Croatian: {{t+|sh|izabran}}, {{t+|sh|odabran}}
 * Swedish: {{t+|sv|vald}}
 {{trans-bottom}}
 
