t+cy:[[dod o hyd]] ([[WT:EDIT|Assisted]]) <find#52347266>

--- a/en/f/find.6884.wikitext
+++ b/en/f/find.6884.wikitext
@@ -201,7 +201,7 @@ Plastics are energy-rich substances, which is why many of them burn so readily. 
 * Vietnamese: {{t+|vi|tìm}}
 * Volapük: {{t+|vo|tuvön}}
 * Walloon: {{t+|wa|trover}}
-* Welsh: {{t|cy|ffeindio}}
+* Welsh: {{t|cy|ffeindio}}, {{t|cy|dod o hyd}}
 * West Frisian: {{t|fy|fine}}, {{t|fy|treffe}}
 * Yiddish: {{t|yi|געפֿינען|sc=Hebr}}
 {{trans-bottom}}
