--- a/en/n/New Zealand.2106.wikitext
+++ b/en/n/New Zealand.2106.wikitext
@@ -49,7 +49,7 @@ From {{etyl|nl|en}} {{m|nl|Nieuw-Zeeland||new Zeeland}}, after the Dutch settlem
 * Afrikaans: {{t|af|Nieu-Seeland}}
 * Albanian: {{t|sq|Zelanda e Re}}
 * Amharic: {{t|am|ኒው ዚላንድ|sc=Ethi}}
-* Arabic: {{t|ar|نِيُوزِيلَانْدَا|f|tr=niyūzīlandā}}, {{t|ar|نِيُوزِيلَنْدَا|f|tr=niyūzīlandā}}, {{t|ar|نِيُوزِيلَانْدَة|f|tr=niyūzīlanda}}, {{t|ar|نِيُوزِيلَنْدَة|f|tr=niyūzīlanda}}
+* Arabic: {{t|ar|نِيُوزِيلَانْدَا|f|tr=niyūzīlandā}}, {{t|ar|نِيُوزِيلَنْدَا|f|tr=niyūzīlandā}}, {{t|ar|نِيُوزِيلَانْدَة|f|tr=niyūzīlanda}}, {{t|ar|نِيُوزِيلَنْدَة|f|tr=niyūzīlanda}}, {{t|ar|زِيلَانْدَا الْجَدِيدَة|f|tr=zīlandā al-jadīda}}, {{t|ar|زِيلَنْدَا الْجَدِيدَة|f|tr=zīlandā al-jadīda}}, {{t|ar|زِيلَانْدَة الْجَدِيدَة|f|tr=zīlanda al-jadīda}}, {{t|ar|زِيلَنْدَة الْجَدِيدَة|f|tr=zīlanda al-jadīda}}
 * Armenian: {{t|hy|Նոր Զելանդիա}}
 * Assamese: {{t|as|নিউজিলেণ্ড}}
 * Asturian: {{t+|ast|Nueva Zelanda|f}}
