/* Old English */ etym <cost#52366694>

--- a/en/c/cost.6840.wikitext
+++ b/en/c/cost.6840.wikitext
@@ -359,7 +359,7 @@ From {{etyl|fro|en}} {{m|fro|coste}} from {{etyl|la|en}} {{m|la|costa}}.
 
 ===Etymology===
 {{PIE root|ang|ǵews}}
-From {{inh|ang|gem-pro|*kust-}}, from {{etyl|ine-pro|ang}} {{m|ine-pro|*ǵews-||to choose}}. Akin to {{cog|osx|kostōn||to try, tempt}}, {{cog|goh|kostōn||to taste, test, try by tasting}} ({{cog|de|kosten}}), {{cog|is|kosta||to try, tempt}}, {{cog|got|𐌺𐌿𐍃𐍄𐌿𐍃||test}}, {{cog|ang|cystan||to spend, get the value of, procure}}, {{cog|ang|cyst||proof, test, trial; choice}}, {{m|ang|ċēosan||to choose}}.
+From {{inh|ang|gem-pro|*kust-}}, from {{der|ang|ine-pro|*ǵews-||to choose}}. Akin to {{cog|osx|kostōn||to try, tempt}}, {{cog|goh|kostōn||to taste, test, try by tasting}} ({{cog|de|kosten}}), {{cog|is|kosta||to try, tempt}}, {{cog|got|𐌺𐌿𐍃𐍄𐌿𐍃||test}}, {{cog|ang|cystan||to spend, get the value of, procure}}, {{cog|ang|cyst||proof, test, trial; choice}}, {{m|ang|ċēosan||to choose}}.
 
 ===Pronunciation===
 * {{IPA|/ˈkost/|lang=ang}}
