--- a/en/c/cost.6840.wikitext
+++ b/en/c/cost.6840.wikitext
@@ -286,9 +286,9 @@ From {{der|en|enm|cost}}, {{m|enm|coust}}, from {{m|enm|costen||to cost}}, see b
 
 ===Etymology 3===
 {{PIE root|en|ǵews}}
-From {{etyl|enm|en}} {{m|enm|cost}}, from {{etyl|ang|en}} {{m|ang|cost||option, choice, possibility, manner, way, condition}}, from {{etyl|non|en}} {{m|non|kostr||choice, opportunity, chance, condition, state, quality}}, from {{etyl|gem-pro|en}} {{m|gem-pro|*kustuz||choice, trial}} (or {{etyl|gem-pro|en}} {{m|gem-pro|*kustiz||choice, trial}}), from {{etyl|ine-pro|en}} {{m|ine-pro|*ǵéwstus||to enjoy, taste}}.
+From {{der|en|enm|cost}}, from {{der|en|ang|cost||option, choice, possibility, manner, way, condition}}, from {{der|en|non|kostr||choice, opportunity, chance, condition, state, quality}}, from  {{der|en|gem-pro|*kustuz||choice, trial}} (or {{der|en|gem-pro|*kustiz||choice, trial}}), from {{der|en|ine-pro|*ǵéwstus||to enjoy, taste}}.
 
-Cognate with {{cog|is|kostur}}, {{etyl|de|-}} dialectal {{m|de|Kust||taste, flavour}}, {{cog|nl|kust||choice, choosing}}, {{cog|frr|kest||choice, estimation, virtue}}, {{cog|fy|kêst||article of law, statute}}, {{cog|ang|cyst||free-will, choice, election, the best of anything, the choicest, picked host, moral excellence, virtue, goodness, generosity, munificence}}, {{cog|la|gustus||taste}}. Related to {{l|en|choose}}.
+Cognate with {{cog|is|kostur}}, {{cog|de|-}} dialectal {{m|de|Kust||taste, flavour}}, {{cog|nl|kust||choice, choosing}}, {{cog|frr|kest||choice, estimation, virtue}}, {{cog|fy|kêst||article of law, statute}}, {{cog|ang|cyst||free-will, choice, election, the best of anything, the choicest, picked host, moral excellence, virtue, goodness, generosity, munificence}}, {{cog|la|gustus||taste}}. Related to {{l|en|choose}}.
 
 ====Noun====
 {{en-noun}}
