t+goh:[[donar]] t+non:[[þórr]] ([[WT:EDIT|Assisted]]) <thunder#52366739>

--- a/en/t/thunder.7222.wikitext
+++ b/en/t/thunder.7222.wikitext
@@ -163,6 +163,8 @@ From {{inh|en|enm|thunder}}, {{m|enm|thonder}}, {{m|enm|thundre}}, {{m|enm|thonr
 * Nyunga: {{t|nys|koondarnangor}}
 * Occitan: {{t+|oc|tron|m}}, {{t|oc|tronada|m}}
 * Old English: {{t|ang|þunor|m}}
+* Old High German: {{t|goh|donar}}
+* Old Norse: {{t|non|þórr|m}}
 * Ossetian: {{t|os|æрвнæрын|sc=Cyrl}}
 * Persian: {{t+|fa|تندر|tr=tondar|sc=fa-Arab}}, {{t+|fa|رعد|tr=ra'd|sc=fa-Arab}}
 * Polish: {{t+|pl|grzmot|m}}, {{t+|pl|grom|m}} {{qualifier|dated, poetic}}
