--- a/en/倰/倰.11058.wikitext
+++ b/en/倰/倰.11058.wikitext
@@ -12,6 +12,9 @@
 ==Chinese==
 {{zh-forms}}
 
+===Glyph origin===
+{{Han etym}}
+
 ===Pronunciation===
 {{zh-pron
 |m=léng
@@ -26,6 +29,9 @@
 {{zh-hanzi}}
 
 # {{rfdef|lang=zh}}
+
+====Compounds====
+{{zh-der|倰儯}}
 
 ----
 
