--- a/en/昂/昂.16938.wikitext
+++ b/en/昂/昂.16938.wikitext
@@ -20,7 +20,7 @@
 {{Han etym}}
 {{Han compound|日|卬|t1=sun|t2=man standing and man kneeling|ls=psc|c1=s|c2=p}}.
 
-===Pronunciation===
+===Pronunciation 1===
 {{zh-pron
 |m=áng
 |m-s=ngang2
@@ -35,7 +35,7 @@
 |cat=v,a,pn
 }}
 
-===Definitions===
+====Definitions====
 {{zh-hanzi}}
 
 # to [[raise]]; to [[lift]]
@@ -43,8 +43,20 @@
 # [[high]] spirited; [[upright]]
 # {{surname|lang=zh}}
 
-===Compounds===
+====Compounds====
 {{zh-der|昂昂|昂奮|昂貴|昂然|昂首|昂首闊步|昂揚|慷慨激昂|人物軒昂|器宇軒昂|低昂|意氣軒昂|德昂族|昂藏|氣昂昂|昂首挺胸|激昂|昂頭挺立|昂首挺立|氣宇軒昂|氣宇昂昂|昂昂溪|激昂慷慨|昂首望天|應昂|波昂|瞵視昂藏|昂昂烈烈|軒昂自若|鬥志昂揚|聳壑昂霄|筋骨昂然|高昂鬥志|高昂|里昂|軒昂氣宇|鬥志高昂|軒昂|氟利昂}}
+
+===Pronunciation 2===
+{{zh-pron
+|m=yàng
+|dial=n
+|cat=a
+}}
+
+====Definitions====
+{{zh-hanzi}}
+
+# {{zh-hg}} {{zh-only|昂昂|tr=yàngyàng|[[virtuous]]; [[respectable]] (of a ruler)}}
 
 ----
 
