--- a/en/p/push.8439.wikitext
+++ b/en/p/push.8439.wikitext
@@ -195,7 +195,7 @@ From {{inh|en|enm|pushen}}, {{m|enm|poshen}}, {{m|enm|posson}}, borrowed from {{
 {{trans-mid}}
 * Latvian: {{t|lv|skubināt}}
 * Polish: {{t+|pl|pchać}}, {{t+|pl|popychać}}
-* Russian: {{t+|ru|подта́лкивать|impf}}, {{t+|ru|подгоня́ть|impf}}
+* Russian: {{t+|ru|подта́лкивать|impf}}, {{t+|ru|подгоня́ть|impf}}, {{t+|ru|прота́лкивать|impf}}
 * Swedish: {{t+|sv|hetsa}}
 * Telugu: {{t|te|నిరంతర వత్తిడి|sc=Telu}}
 {{trans-bottom}}
