--- a/en/v/vomit.8434.wikitext
+++ b/en/v/vomit.8434.wikitext
@@ -167,7 +167,6 @@ From {{inh|en|enm|vomiten}}, from {{der|en|la|vomitāre}}, present active infini
 
 ====Translations====
 {{trans-top|regurgitated former contents of a stomach}}
-* Arabic: {{t|ar|قُيَاء|m}}
 * Armenian: {{t+|hy|փսխունք}}
 * Assamese: {{t|as|বমি}}
 * Asturian: {{t|ast|vómitu|m}}
@@ -226,7 +225,7 @@ From {{inh|en|enm|vomiten}}, from {{der|en|la|vomitāre}}, present active infini
 {{trans-bottom}}
 
 {{trans-top|the act of vomiting}}
-* Arabic: {{t|ar|اِسْتِفْرَاغ|m}}
+* Arabic: {{t|ar|تَقَيُّؤ|m}}
 * Galician: {{t|gl|vómito|m}}
 * Georgian: {{t|ka|პირღებინება}}, {{t|ka|ჩანჩქერო}}, {{t+|ka|ღებინება}}, {{t|ka|რწყევა}}
 * Hebrew: {{t+|he|הֲקָאָה|f|tr=haka'á}}
