--- a/en/昡/昡.16969.wikitext
+++ b/en/昡/昡.16969.wikitext
@@ -4,10 +4,6 @@
 ===Han character===
 {{Han char|rn=72|rad=日|as=05|sn=9|four=60032|canj=AYVI|ids=⿰日玄}}
 
-# [[long]] [[day]]
-# [[extended]]
-# [[relaxed]]
-
 ====References====
 * {{Han ref|kx=0493.020|dkj=13839|dj=0856.020|hdz=21503.100|uh=6621|ud=26145|bh=CEEC|bd=52972}}
 
@@ -23,13 +19,13 @@
 |mc=
 |oc=
 |ma=
-|cat=n,a
+|cat=n
 }}
 
 ===Definitions===
 {{zh-hanzi}}
 
-# {{rfdef|lang=zh}}
+# {{lb|zh|literary}} [[sunshine]]; [[sunlight]]
 
 ----
 
