--- a/en/f/feel.6876.wikitext
+++ b/en/f/feel.6876.wikitext
@@ -60,11 +60,7 @@ From {{inh|en|enm|felen}}, from {{inh|en|ang|fēlan|t=to feel, perceive, touch}}
 #: {{ux|en|I don't want you back here, ya '''feel''' me?}}
 
 =====Usage notes=====
-* Most prescriptive grammarians prefer "I feel bad" to "I feel badly", but "I feel badly" is widely used in US English.
-* {{m|en|badly|Badly}} is sometimes used after {{m|en||feel}} in its copulative sense where one might expect an adjective, i.e., {{m|en|bad}}.
-* Some users use {{m|en||badly}} when referring to an emotional state, and {{m|en||bad}} when referring to a more physical or medical state.
-<!--* ''I feel bad.'' means either ''I seem to myself to be [[sick]].'' or ''I am full of [[regret]].''
-* ''I feel badly.'' means ''I have [[trouble]] experiencing emotions.'' or ''I am not able to use the sense of touch well.'' Both comments incomplete and misleading.-->
+* When referring to the emotional state, most prescriptive grammarians prefer "I feel bad" to "I feel badly", but "I feel badly" is widely used this way in US English.
 * Adjectives to which "feel" is often applied as a copula: free, cold, cool, warm, hot, young, old, good, great, fine, happy, glad, satisfied, excited, bad, depressed, unhappy, sad, blue, sorry, smart, stupid, loved, appreciated, accepted, rejected, lonely, isolated, insulted, offended, slighted, cheated, shy, refreshed, tired, exhausted, calm, relaxed, angry, annoyed, frustrated, anxious, worried, jealous, proud, confident, safe, grateful, uncomfortable, unsafe, insecure, desperate, guilty, ashamed, disappointed, dirty, odd, strange, ill, sick.
 
 =====Derived terms=====
