--- a/en/b/blond.6878.wikitext
+++ b/en/b/blond.6878.wikitext
@@ -46,6 +46,7 @@ Alternative etymology connects {{cog|frk|*blund}} to {{der|en|gem-pro|*blundaz|t
 * Icelandic: {{t|is|ljóshærður|m}}, {{t|is|ljóshærð|f}}
 * Ido: {{qualifier|♂}} {{t+|io|blondulo}}, {{qualifier|♀}} {{t+|io|blondino}}, {{t+|io|blondo}}
 * Indonesian: {{t+|id|pirang}}
+* Irish: {{t|ga|bánach|m}}, {{t|ga|céibheann|f}}, {{t|ga|fionn}}
 * Italian: {{t+|it|biondo|m}}, {{t+|it|bionda|f}}
 * Japanese: {{t+|ja|ブロンド|tr=burondo}}, {{t+|ja|金髪|tr=きんぱつ, kinpatsu}} {{qualifier|blond hair}}
 {{trans-mid}}
@@ -159,7 +160,7 @@ Alternative etymology connects {{cog|frk|*blund}} to {{der|en|gem-pro|*blundaz|t
 * Ido: {{t+|io|blonda}}
 * Indonesian: {{t+|id|pirang}}
 {{trans-mid}}
-* Irish: {{t|ga|fionn}}, {{t|ga|barrbhuí}}, {{t|ga|foltbhuí}}, {{t|ga|buíbhán}}, {{t|ga|barrfhionn}}, {{t|ga|cúileann}}, {{t|ga|cúlbhán}}, {{t|ga|foltfhionn}}
+* Irish: {{t|ga|fionn}}, {{t|ga|barrbhuí}}, {{t|ga|foltbhuí}}, {{t|ga|buíbhán}}, {{t|ga|barrfhionn}}, {{t|ga|cúileann}}, {{t|ga|cúlbhán}}, {{t|ga|foltfhionn}}, {{t|ga|bánfholtach}}, {{t|ga|fionngheal}}, {{t|ga|moingfhionn}}, {{t+|ga|bán}}
 * Italian: {{t+|it|biondo}}
 * Japanese: {{t+|ja|金髪|tr=kinpatsu}}
 * Khmer: {{t|km|សក់ទង់ដែង|tr=sɑk tʊəŋ daeŋ}}
