--- a/en/f/flaxen.6882.wikitext
+++ b/en/f/flaxen.6882.wikitext
@@ -23,13 +23,13 @@ From {{inh|en|enm|flaxen}}, {{m|enm|flexon}}, {{m|enm|flexin}}, from {{inh|en|an
 * Finnish: {{t|fi|pellavainen}}
 * German: {{t+|de|flachsen}}
 {{trans-mid}}
-* Japanese: [[亜麻]][[製]]の (あませいの, amasei no)
+* Japanese: {{t|ja|亜麻製|tr=あませいの, amasei no|alt=亜麻製の}}
 * Latin: {{t|la|līneus}}
 * Polish: {{t+|pl|lniany|m}}
 * Russian: {{t+|ru|льняно́й}}
 {{trans-bottom}}
 
-{{trans-top|colour}}
+{{trans-top|color}}
 * Bulgarian: {{t+|bg|светложълт|sc=Cyrl}}
 * Chinese:
 *: Mandarin: {{t|cmn|亚麻色|sc=Hani}}
@@ -37,7 +37,8 @@ From {{inh|en|enm|flaxen}}, {{m|enm|flexon}}, {{m|enm|flexin}}, from {{inh|en|an
 * French: {{t|fr|de lin}}
 {{trans-mid}}
 * German: {{t+|de|flachsfarben}}
-* Japanese: [[亜麻]][[色]]の (あまいろの, amairo no)
+* Irish: {{t|ga|buíbhán}}, {{t|ga|fionn}} {{qualifier|of hair}}
+* Japanese: {{t|ja|亜麻色|tr=あまいろの, amairo no|alt=亜麻色の}}
 * Maori: {{t|mi|kōrito}} {{qualifier|of hair}}
 * Polish: {{t+|pl|lniany|m}}, {{t+|pl|jasnobrązowy|m}}
 * Portuguese: {{t|pt|cor de linho|f}}
