--- a/en/b/blond.6878.wikitext
+++ b/en/b/blond.6878.wikitext
@@ -14,101 +14,22 @@ Alternative etymology connects {{cog|frk|*blund}} to {{der|en|gem-pro|*blundaz|t
 * {{a|GA}} {{IPA|/blɑnd/|lang=en}}
 * {{rhymes|ɒnd|lang=en}}
 
-===Noun===
-{{en-noun}}
-
-# A [[pale]] [[yellow]]ish ([[golden]] [[brown]]) [[color]], especially said of hair color.
-#: {{color panel|F8E8A7}}
-# A person with this hair color.
-
-====Usage notes====
-* This word can vary according to gender, with “blond” being used of males and “blonde” of women and girls, following French usage. However, some writers, especially in the United States, treat the spellings as interchangeable and use both gender-neutrally. Compare, for example, the 2000 non-fiction book [[w:Angry Blonde|''Angry Blonde'']] and the 2001 film [[w:Legally Blonde|''Legally Blonde'']], the titles of which refer to male and female blonds respectively.
-* Traditional terms for light hair are ''[[fair]]([[fair-haired|-haired]])'', ''[[fairheaded]]'', ''[[flaxen]]'', ''[[tow-haired]]'', ''[[yellow-haired]]'', and ''[[towhead]]([[towheaded|ed]])''.
-
-====Translations====
-{{trans-top|a pale yellowish color}}
-* Bulgarian: {{t|bg|руса коса}} {{qualifier|hair color}}
-* Dutch: {{t+|nl|blond}} {{qualifier|hair colour}}
-* French: {{t+|fr|blond|m}}
-* German: {{t|de|Blond|n}}
-* Hungarian: {{t+|hu|szőke}} {{qualifier|hair color}}
-* Indonesian: {{t+|id|pirang}}
-* Japanese: {{t+|ja|金髪|tr=kinpatsu}} {{qualifier|hair color}}
-{{trans-mid}}
-* Kurdish:
-*: Central Kurdish: {{t|ckb|کاڵ}}
-*: Southern Kurdish: {{t|sdh|ھۊل}}
-* Persian: {{t+|fa|بور}}
-* Polish: {{t+|pl|blond|m}}
-* Portuguese: {{t+|pt|loiro|m}}
-{{trans-bottom}}
-
-{{trans-top|fair-haired person}}
-* Bulgarian: {{t|bg|блонди́н|m}}, {{t|bg|блонди́нка|f}}
-* Catalan: {{t+|ca|ros|m}}<!--(only hair, not skin)-->
-* Chinese:
-*: Mandarin: {{t+|cmn|金髮}}, {{t+|cmn|金发|tr=jīnfà}} {{qualifier|blond hair}}
-* Czech: {{t+|cs|blondýna|f}}, {{t+|cs|blonďák|m}}
-* Danish: {{t|da|lyshåret}}; blond, {{t+|da|blondine}}
-* Dutch: {{t+|nl|blond}}, {{t+|nl|blondine}}
-* Esperanto: {{qualifier|♂♀}} {{t|eo|blondulo}}, {{qualifier|♂}} {{t|eo|virblondulo}}, {{qualifier|♀}} {{t|eo|blondulino}}
-* Finnish: {{t+|fi|vaaleaverikkö}}, {{t+|fi|blondi}}
-* French: {{t+|fr|blond|m}}, {{t+|fr|blonde|f}}
-* Galician: {{t+|gl|louro}}, {{t+|gl|rubio}}
-* Georgian: {{t|ka|ქერა}}
-* German: {{t+|de|Blonder|m}}, {{t|de|Blondin|m}} {{qualifier|obsolete}}, {{t+|de|Blonde|f}}, {{t+|de|Blondine|f}}, {{t|de|Blondhaariger|m}}, {{t|de|Blondhaarige|f}}, {{t|de|Flachshaariger|m}}, {{t|de|Flachshaarige|f}}, {{qualifier|♂♀}} {{t|de|Blondkopf|m}}, {{qualifier|♂♀}} {{t+|de|Blondschopf|m}}
-* Hebrew: {{t|he|בְּלוֹנְדִּינִי|m|tr=blondíni}}, {{t|he|בְּלוֹנְדִּינִית|f|tr=blondínit}}
-* Hindi: {{t|hi|सुनहरे बालोंवाला}}
-* Hungarian: {{t+|hu|szőke}}
-* Icelandic: {{t|is|ljóshærður|m}}, {{t|is|ljóshærð|f}}
-* Ido: {{qualifier|♂}} {{t+|io|blondulo}}, {{qualifier|♀}} {{t+|io|blondino}}, {{t+|io|blondo}}
-* Indonesian: {{t+|id|pirang}}
-* Irish: {{t|ga|bánach|m}}, {{t|ga|céibheann|f}}, {{t|ga|fionn}}
-* Italian: {{t+|it|biondo|m}}, {{t+|it|bionda|f}}
-* Japanese: {{t+|ja|金髪|tr=きんぱつ, kinpatsu}} {{qualifier|blond hair}}
-{{trans-mid}}
-* Korean: {{t|ko|금발인}}, {{t+|ko|금발}} {{qualifier|blond hair}}
-* Latin: {{t+|la|flāvus|m}}, {{t|la|flāvicomus|m}}, {{t+|la|fulvus|m}}, {{t|la|flava|f}}
-* Latvian: {{t|lv|gaišmatis|m}}, {{t|lv|gaišmate|f}}, {{t|lv|blondīns|m}}, {{t|lv|blondīne|f}}
-* Macedonian: {{t|mk|ру́сокос|m}}, {{t|mk|плав|m}}, {{t|mk|русо́коса|f}}, {{t|mk|пла́ва|f}}
-* Mongolian: {{t|mn|[[цайвар]] [[үс|үстэй]] [[хүн]]}}
-* Norwegian: {{t|no|lys(håret)}}, blond, {{t+|no|blondine}}
-* Persian: {{t+|fa|بلوند|tr=blond}}
-* Polish: {{t+|pl|blondyn|m}}, {{t+|pl|blondynka|f}}
-* Portuguese: {{t+|pt|loiro|m}}, {{t+|pt|louro|m}}, {{t+|pt|loira|m}}, {{t+|pt|loura|f}}
-* Punjabi: {{t|pa|ਕੱਕਾ|m}}
-* Romanian: {{t+|ro|blondă}}
-* Russian: {{t+|ru|блонди́н|m}}, {{t+|ru|блонди́нка|f}}
-* Spanish: {{t+|es|rubio|m}}, {{t|es|canche|m}} {{qualifier|Guatemala}}, {{t|es|catire|m}} {{qualifier|Venezuela}}, {{t+|es|chele|m}} {{qualifier|El Salvador|Honduras|Nicaragua}}, {{t+|es|choco|m}} {{qualifier|Bolivia}}, {{t|es|fulo|m}} {{qualifier|Panama}}, {{t+|es|gringo|m}} {{qualifier|Peru}}, {{t+|es|güero|m}} {{qualifier|Mexico}}, {{t+|es|macho|m}} {{qualifier|Costa Rica}}, {{t+|es|mono|m}} {{qualifier|Colombia}}, {{t+|es|rucio|m}} {{qualifier|Chile}}, {{t|es|suco|m}} {{qualifier|Ecuador}}
-* Swedish: {{t+|sv|blondin|c}}
-* Tagalog: {{t|tl|rubyo}}, {{t|tl|rubya}}
-* Turkish: {{t+|tr|sarışın}}
-* Urdu: {{t|ur|سنہرے بالونوالا|m|tr=sunahre bālonvālā}}
-* Vietnamese: {{t|vi|tóc vàng hoe}}
-* Volapük: {{qualifier|♂♀}} {{t+|vo|blonan}}, {{qualifier|♂}} {{t|vo|hiblonan}}, {{qualifier|♀}} {{t+|vo|jiblonan}}
-* Welsh: {{t+|cy|penfelyn}}
-{{trans-bottom}}
-
 ===Adjective===
 [[Image:Lucy Merriam.jpg|thumb|A girl with light blonde hair]]
 {{en-adj|er|more}}
 
 # Of a bleached or pale golden (light [[yellow]]ish) colour.
-#: '''''blond''' hair''
-#: '''''blonde''' ale''; '''''blonde''' beer''
-#* '''1914''', in the ''American Anthropologist'':
-#*: She has a '''blond''' complexion, with brown hair and gray eyes.
-#* {{quote-journal|lang=en|year=2011|month=Feb|title=Beauty Confessions|volume=216|issue=2|page=60|magazine=Redbook|passage=If you're going one or two shades lighter, don't even touch your brows. But if you're making a big change, soften them by tinting them with home haircolor: a lighter shade of brown for '''blonder''' shades, a golden shade if you're dyeing your hair red.
-}}
+#: {{ux|en|blond hair}}
+#: {{ux|en|'''blonde''' ale}}; {{ux|en|'''blonde''' beer}}
+#* {{quote-journal|lang=en|year=1914|title=American Anthropologist|passage=She has a '''blond''' complexion, with brown hair and gray eyes.}}
+#* {{quote-journal|lang=en|year=2011|month=Feb|title=Beauty Confessions|volume=216|issue=2|page=60|magazine=Redbook|passage=If you're going one or two shades lighter, don't even touch your brows. But if you're making a big change, soften them by tinting them with home haircolor: a lighter shade of brown for '''blonder''' shades, a golden shade if you're dyeing your hair red.}}
 # {{lb|en|of a|person}} Having blond hair.
-#* '''1956''', {{w|James Baldwin}}, ''{{w|Giovanni’s Room}}'', Penguin, 2001, Part Two, Chapter 2,
-#*: He seemed—somehow—younger than I had ever been, and '''blonder''' and more beautiful, and he wore his masculinity as unequivocally as he wore his skin.
+#* {{quote-book|lang=en|year=1956|author={{w|James Baldwin}}|title={{w|Giovanni's Room}}|publisher=Penguin|year_published=2001|section=Part 2|chapter=2|passage=He seemed—somehow—younger than I had ever been, and '''blonder''' and more beautiful, and he wore his masculinity as unequivocally as he wore his skin.}}
 #* {{quote-journal|lang=en|year=2012|month=Jan|title=The Best Blonde Hair Color in Hollywood|magazine=Cosmopolitan|url=http://www.cosmopolitan.com/hairstyles-beauty/hair-care/best-blonde-hair-color#slide-1|passage='''Blonde''' bombshells have been around since the beginning of time, but lately, stars have really been stepping up their golden-haired game.}}
 # {{alternative spelling of|blonde|lang=en||stupid}}
-#* '''2010''', Mariah Stewart, ''Moon Dance'', Simon and Schuster {{ISBN|9781451633054}}
-#*: “She was so '''blond''', that where it said &#39;sign here,&#39; she wrote Gemini.” He had given her only the weakest of smiles.
-#* '''2002''', Michael Jay, ''The Altherian Code'', iUniverse {{ISBN|9780595214914}}, page 118
-#*: Katelyn&#39;s laugh was nearly uncontrollable. “You are so '''blond''' sometimes,” she said with a long laughing sigh, but then calmed herself down.
+#* {{quote-book|lang=en|year=2010
+|author=Mariah Stewart|title=Moon Dance|publisher=Simon & Schuster|isbn={{ISBN|9781451633054}}|passage=“She was so '''blond''', that where it said &#39;sign here,&#39; she wrote Gemini.” He had given her only the weakest of smiles.}}
+#* {{quote-book|lang=en|year=2002|author=Michael Jay|title=The Altherian Code|publisher=iUniverse|isbn={{ISBN|9780595214914}}|page=118|passage=Katelyn&#39;s laugh was nearly uncontrollable. “You are so '''blond''' sometimes,” she said with a long laughing sigh, but then calmed herself down.}}
 
 ====Translations====
 {{trans-top|of a pale golden colour}}
@@ -191,8 +112,83 @@ Alternative etymology connects {{cog|frk|*blund}} to {{der|en|gem-pro|*blundaz|t
 * Turkish: {{t+check|tr|sarışın}}
 {{trans-bottom}}
 
+===Noun===
+{{en-noun}}
+
+# A [[pale]] [[yellow]]ish ([[golden]] [[brown]]) [[color]], especially said of hair color.
+#: {{color panel|F8E8A7}}
+# A person with this hair color.
+
+====Usage notes====
+* This word can vary according to gender, with “blond” being used of males and “blonde” of women and girls, following French usage. However, some writers, especially in the United States, treat the spellings as interchangeable and use both gender-neutrally. Compare, for example, the 2000 non-fiction book [[w:Angry Blonde|''Angry Blonde'']] and the 2001 film [[w:Legally Blonde|''Legally Blonde'']], the titles of which refer to male and female blonds respectively.
+* Traditional terms for light hair are ''[[fair]]([[fair-haired|-haired]])'', ''[[fairheaded]]'', ''[[flaxen]]'', ''[[tow-haired]]'', ''[[yellow-haired]]'', and ''[[towhead]]([[towheaded|ed]])''.
+
+====Translations====
+{{trans-top|a pale yellowish color}}
+* Bulgarian: {{t|bg|руса коса}} {{qualifier|hair color}}
+* Dutch: {{t+|nl|blond}} {{qualifier|hair colour}}
+* French: {{t+|fr|blond|m}}
+* German: {{t|de|Blond|n}}
+* Hungarian: {{t+|hu|szőke}} {{qualifier|hair color}}
+* Indonesian: {{t+|id|pirang}}
+* Japanese: {{t+|ja|金髪|tr=kinpatsu}} {{qualifier|hair color}}
+{{trans-mid}}
+* Kurdish:
+*: Central Kurdish: {{t|ckb|کاڵ}}
+*: Southern Kurdish: {{t|sdh|ھۊل}}
+* Persian: {{t+|fa|بور}}
+* Polish: {{t+|pl|blond|m}}
+* Portuguese: {{t+|pt|loiro|m}}
+{{trans-bottom}}
+
+{{trans-top|fair-haired person}}
+* Bulgarian: {{t|bg|блонди́н|m}}, {{t|bg|блонди́нка|f}}
+* Catalan: {{t+|ca|ros|m}}<!--(only hair, not skin)-->
+* Chinese:
+*: Mandarin: {{t+|cmn|金髮}}, {{t+|cmn|金发|tr=jīnfà}} {{qualifier|blond hair}}
+* Czech: {{t+|cs|blondýna|f}}, {{t+|cs|blonďák|m}}
+* Danish: {{t|da|lyshåret}}; blond, {{t+|da|blondine}}
+* Dutch: {{t+|nl|blond}}, {{t+|nl|blondine}}
+* Esperanto: {{qualifier|♂♀}} {{t|eo|blondulo}}, {{qualifier|♂}} {{t|eo|virblondulo}}, {{qualifier|♀}} {{t|eo|blondulino}}
+* Finnish: {{t+|fi|vaaleaverikkö}}, {{t+|fi|blondi}}
+* French: {{t+|fr|blond|m}}, {{t+|fr|blonde|f}}
+* Galician: {{t+|gl|louro}}, {{t+|gl|rubio}}
+* Georgian: {{t|ka|ქერა}}
+* German: {{t+|de|Blonder|m}}, {{t|de|Blondin|m}} {{qualifier|obsolete}}, {{t+|de|Blonde|f}}, {{t+|de|Blondine|f}}, {{t|de|Blondhaariger|m}}, {{t|de|Blondhaarige|f}}, {{t|de|Flachshaariger|m}}, {{t|de|Flachshaarige|f}}, {{qualifier|♂♀}} {{t|de|Blondkopf|m}}, {{qualifier|♂♀}} {{t+|de|Blondschopf|m}}
+* Hebrew: {{t|he|בְּלוֹנְדִּינִי|m|tr=blondíni}}, {{t|he|בְּלוֹנְדִּינִית|f|tr=blondínit}}
+* Hindi: {{t|hi|सुनहरे बालोंवाला}}
+* Hungarian: {{t+|hu|szőke}}
+* Icelandic: {{t|is|ljóshærður|m}}, {{t|is|ljóshærð|f}}
+* Ido: {{qualifier|♂}} {{t+|io|blondulo}}, {{qualifier|♀}} {{t+|io|blondino}}, {{t+|io|blondo}}
+* Indonesian: {{t+|id|pirang}}
+* Irish: {{t|ga|bánach|m}}, {{t|ga|céibheann|f}}, {{t|ga|fionn}}
+* Italian: {{t+|it|biondo|m}}, {{t+|it|bionda|f}}
+* Japanese: {{t+|ja|金髪|tr=きんぱつ, kinpatsu}} {{qualifier|blond hair}}
+{{trans-mid}}
+* Korean: {{t|ko|금발인}}, {{t+|ko|금발}} {{qualifier|blond hair}}
+* Latin: {{t+|la|flāvus|m}}, {{t|la|flāvicomus|m}}, {{t+|la|fulvus|m}}, {{t|la|flava|f}}
+* Latvian: {{t|lv|gaišmatis|m}}, {{t|lv|gaišmate|f}}, {{t|lv|blondīns|m}}, {{t|lv|blondīne|f}}
+* Macedonian: {{t|mk|ру́сокос|m}}, {{t|mk|плав|m}}, {{t|mk|русо́коса|f}}, {{t|mk|пла́ва|f}}
+* Mongolian: {{t|mn|[[цайвар]] [[үс|үстэй]] [[хүн]]}}
+* Norwegian: {{t|no|lys(håret)}}, blond, {{t+|no|blondine}}
+* Persian: {{t+|fa|بلوند|tr=blond}}
+* Polish: {{t+|pl|blondyn|m}}, {{t+|pl|blondynka|f}}
+* Portuguese: {{t+|pt|loiro|m}}, {{t+|pt|louro|m}}, {{t+|pt|loira|m}}, {{t+|pt|loura|f}}
+* Punjabi: {{t|pa|ਕੱਕਾ|m}}
+* Romanian: {{t+|ro|blondă}}
+* Russian: {{t+|ru|блонди́н|m}}, {{t+|ru|блонди́нка|f}}
+* Spanish: {{t+|es|rubio|m}}, {{t|es|canche|m}} {{qualifier|Guatemala}}, {{t|es|catire|m}} {{qualifier|Venezuela}}, {{t+|es|chele|m}} {{qualifier|El Salvador|Honduras|Nicaragua}}, {{t+|es|choco|m}} {{qualifier|Bolivia}}, {{t|es|fulo|m}} {{qualifier|Panama}}, {{t+|es|gringo|m}} {{qualifier|Peru}}, {{t+|es|güero|m}} {{qualifier|Mexico}}, {{t+|es|macho|m}} {{qualifier|Costa Rica}}, {{t+|es|mono|m}} {{qualifier|Colombia}}, {{t+|es|rucio|m}} {{qualifier|Chile}}, {{t|es|suco|m}} {{qualifier|Ecuador}}
+* Swedish: {{t+|sv|blondin|c}}
+* Tagalog: {{t|tl|rubyo}}, {{t|tl|rubya}}
+* Turkish: {{t+|tr|sarışın}}
+* Urdu: {{t|ur|سنہرے بالونوالا|m|tr=sunahre bālonvālā}}
+* Vietnamese: {{t|vi|tóc vàng hoe}}
+* Volapük: {{qualifier|♂♀}} {{t+|vo|blonan}}, {{qualifier|♂}} {{t|vo|hiblonan}}, {{qualifier|♀}} {{t+|vo|jiblonan}}
+* Welsh: {{t+|cy|penfelyn}}
+{{trans-bottom}}
+
 ===Derived terms===
-{{der3|en|[[ash blond]]/[[ash blonde]]|[[bleached blond]]/[[bleached blonde]]|blondie|blondish|blondism|[[blondly]]/[[blondely]]|blond metal|[[blond moment]]/[[blonde moment]]|blonden|[[blondness]]/[[blondeness]]|[[bottle blond]]/[[bottle blonde]]|[[dirty blond]]/[[dirty blonde]]|[[dishwater blond]]/[[dishwater blonde]]|[[dumb blond]]/[[dumb blonde]]|[[golden blond]]/[[golden blonde]]|[[honey blond]]/[[honey blonde]]|[[peroxide blond]]/[[peroxide blonde]]|[[platinum blond]]/[[platinum blonde]]|[[sandy blond]]/[[sandy blonde]]|[[strawberry blond]]/[[strawberry blonde]]|ultrablond|[[Venetian blond]]/[[Venetian blonde]]|[[white blond]]/[[white blonde]]}}
+{{der3|en|ash blond|bleached blond|blondie|blondish|blondism|blondly|blond metal|bottle blond|dirty blond|dishwater blond|golden blond|honey blond|platinum blond|sandy blond|strawberry blond|ultrablond|Venetian blond|white blond}}
 
 ====See also====
 * [[brunet]], [[brunette]]
@@ -245,7 +241,7 @@ From {{bor|gmw-cfr|fr|blond}}, probably via {{bor|gmw-cfr|de|-}}.
 ===Adjective===
 {{nl-adj}}
 
-# of light colour {{gloss|usually said about light hair colour, but it can also refer to beer}}
+# of light color {{gloss|usually said about light hair color, but it can also refer to beer}}
 
 ====Inflection====
 {{nl-decl-adj}}
@@ -273,7 +269,7 @@ Of {{der|fr|gem}} origin: probably from {{bor|fr|frk|*blund||a mixed color betwe
 ===Noun===
 {{fr-noun|m|f=blonde}}
 
-# the colour blond; a golden-brown
+# the color blond; a golden-brown
 # someone with blond hair
 
 ===Further reading===
