--- a/en/惜/惜.15601.wikitext
+++ b/en/惜/惜.15601.wikitext
@@ -29,6 +29,8 @@ Meixian: xiag5 - vernacular; xid5 - literary
 |md=sék
 |mn=sioh/xm,zz,tw:sek/qz:siak
 |mn_note=sioh - vernacular; sek/siak - literary
+|mn-t=sioh4/siêh4
+|mn-t_note=sioh4 - Shantou; siêh4 - Chaozhou
 |w=
 |mc=y
 |oc=y
