--- a/en/倭/倭.11052.wikitext
+++ b/en/倭/倭.11052.wikitext
@@ -36,9 +36,11 @@
 ====Definitions====
 {{zh-hanzi}}
 
-# [[dwarf]]
+#[[distant]]
 # {{lb|zh|historical|now|pejorative}} [[Japan]]; [[Yamato]]
-# [[dwarfish]], [[short]]
+#[[submissive]]
+#[[bowing]]
+#[[short]]
 
 ====See also====
 * {{zh-l|大和}}
