--- a/en/c/curve.7392.wikitext
+++ b/en/c/curve.7392.wikitext
@@ -56,6 +56,7 @@ From {{der|en|la|curvus|t=bent, curved}}.
 * French: {{t+|fr|courbe|f}}
 * German: {{t+|de|Kurve|f}}
 * Greek: {{t+|el|καμπύλη|f}}
+*: Ancient: {{t|grc|καμπή|f}}
 * Hebrew: {{t|he|עקימה|f|tr='aqima}}
 * Ido: {{t+|io|kurvo}}
 * Indonesian: {{t+|id|lengkungan}}
