--- a/en/惟/惟.15604.wikitext
+++ b/en/惟/惟.15604.wikitext
@@ -41,6 +41,7 @@
 # [[but]]; [[however]]; [[nevertheless]]
 # [[only]]
 # to think; to contemplate
+# {{†}} {{zh-alt-form|唯|[[to be]]
 
 ===Compounds===
 {{zh-der|惟命是聽|匪惟|惟命是從|令出惟行|惟力是視|惟精惟一|惟恐|惟利是營|惟利是圖|不惟|伏惟|人心惟危|惟利是逐|思惟|惟天可表|授職惟賢|正思惟|禍福惟人|洪惟|民惟邦本|明德惟馨|非惟|惟妙惟肖}}
