correcting Arabic-script characters: replaced [[ى]] (alef maksura) with [[ی]] (Farsi yeh) in Urdu <vomit#52528888>

--- a/en/v/vomit.8434.wikitext
+++ b/en/v/vomit.8434.wikitext
@@ -219,7 +219,7 @@ From {{inh|en|enm|vomiten}}, from {{der|en|la|vomitāre}}, present active infini
 * Telugu: {{t+|te|వాంతి}}
 * Turkish: {{t+|tr|kusmuk}}, {{t+|tr|kusuntu}}
 * Ukrainian: {{t+|uk|блюво́та|f}}, {{t+|uk|блювоти́ння|n}}
-* Urdu: {{t|ur|الٹى}}
+* Urdu: {{t|ur|الٹی}}
 * Vietnamese: {{t+|vi|nôn}}, {{t+|vi|mửa}}
 * Zazaki: {{t|zza|vırte}}
 {{trans-bottom}}
