--- a/en/p/pull.8438.wikitext
+++ b/en/p/pull.8438.wikitext
@@ -320,7 +320,7 @@ From {{inh|en|enm|pullen}}, from {{inh|en|ang|pullian|t=to pull, draw, tug, pluc
 * Thai: {{t+|th|ดึง}}
 * Turkish: {{t+|tr|çekmek}}
 * Ukrainian: {{qualifier|abstract}} {{t|uk|тяга́ти|impf}}, {{t|uk|потяга́ти|pf}}, {{qualifier|concrete}} {{t|uk|тягти́|impf}}, {{t|uk|потягти́|pf}}, {{t|uk|тягну́ти|impf}}, {{t|uk|потягну́ти|pf}}, {{t|uk|витя́гувати}}, {{t|uk|витяга́ти}}
-* Urdu: {{t|ur|کهينچنا|tr=khī̃cnā|sc=ur-Arab}}
+* Urdu: {{t|ur|کهینچنا|tr=khī̃cnā|sc=ur-Arab}}
 * Uyghur: {{t|ug|تارتماق}}
 * Uzbek: {{t+|uz|tortmoq}}
 * Vietnamese: {{t+|vi|kéo}}, {{t+|vi|giật}}, {{t+|vi|lôi}}
