--- a/en/c/creep.6841.wikitext
+++ b/en/c/creep.6841.wikitext
@@ -219,6 +219,7 @@ From the above verb.
 * German: {{t+|de|Knilch|m}}
 {{trans-mid}}
 * Italian: {{t+|it|antipatico|m}}, {{t+|it|ruffiano}}, {{t+|it|lecchino}}
+* Spanish: {{t+|es|desgraciado|m}}
 * Swedish: {{t+|sv|miffo|n}}, {{t+|sv|äckel|n}}, {{t|sv|äckelpotta|c}}
 {{trans-bottom}}
 
