t+sq:[[plis]] ([[WT:EDIT|Assisted]]) <felt#52597173>

--- a/en/f/felt.6877.wikitext
+++ b/en/f/felt.6877.wikitext
@@ -32,7 +32,7 @@ From {{inh|en|enm|felt}}, from {{inh|en|ang|felt}}, from {{inh|en|gem-pro|*felta
 
 =====Translations=====
 {{trans-top|cloth made of matted fibres of wool}}
-* Albanian: {{t-needed|sq}}
+* Albanian: {{t+|sq|plis|m}}
 * Armenian: {{t+|hy|թաղիք}}
 * Asturian: {{t|ast|fieltru|m}}
 * Bashkir: {{t|ba|кейеҙ}}
