--- a/en/昤/昤.16972.wikitext
+++ b/en/昤/昤.16972.wikitext
@@ -10,16 +10,25 @@
 {{Han ref|kx=0493.050|dkj=13843|dj=0856.060|hdz=21502.070|uh=6624}}
 
 ----
+==Chinese==
+{{zh-forms}}
 
-==Cantonese==
+===Glyph origin===
+{{Han etym}}
 
-===Hanzi===
-{{yue-hanzi|jyut=[[ling4]]|y=ling4}}
+===Pronunciation===
+{{zh-pron
+|m=líng
+|c=ling4
+|mc=y
+|oc=y
+|cat=n
+}}
 
-# {{defn|lang=yue|sort=日05}}
+===Definitions===
+{{zh-hanzi}}
 
-====References====
-* [http://www.iso10646hk.net/jp/document/download.jsp Jyutping Database (iso10646hk.net) - Cantonese Pronunciation List (Part 2), p. 122]
+# {{†}} [[sunshine]]
 
 ----
 
@@ -43,15 +52,6 @@
 {{ko-hanja|hangeul=[[령]]>[[영]]|eumhun=|rv=ryeong>yeong|mr=ryŏng>yŏng|y=lyeng>yeng}}
 
 # {{defn|lang=ko|sort=日05}}
-
-----
-
-==Mandarin==
-
-===Hanzi===
-{{cmn-hanzi|pin=[[líng]] ([[ling2]])|wg=ling<sup>2</sup>}}
-
-# {{defn|lang=cmn|sort=日05}}
 
 ----
 
