--- a/en/坱/坱.13044.wikitext
+++ b/en/坱/坱.13044.wikitext
@@ -10,13 +10,27 @@
 * {{Han ref|kx=0226.310|dkj=04986|dj=0462.080|hdz=10431.100|uh=5771|ud=22385|bh=CBF6|bd=52214}}
 
 ----
+==Chinese==
+{{zh-forms}}
 
-==Cantonese==
+===Glyph origin===
+{{Han etym}}
 
-===Hanzi===
-{{yue-hanzi|jyut=[[joeng2]], [[joeng5]]|y=yeung2, yeung5}}
+===Pronunciation===
+{{zh-pron
+|m=yǎng
+|c=joeng2,joeng5
+|mc=y
+|oc=y
+|cat=n,a
+}}
 
-# {{defn|lang=yue|sort=土05}}
+===Definitions===
+{{zh-hanzi}}
+
+# {{†}} [[fine]] [[dust]]
+# {{†}} [[plentiful]]
+# {{†}} [[vast]]
 
 ----
 
@@ -38,15 +52,6 @@
 {{ko-hanja|hangeul=앙|rv=ang|mr=ang}}
 
 # {{defn|lang=ko|sort=土05}}
-
-----
-
-==Mandarin==
-
-===Hanzi===
-{{cmn-hanzi|pin=[[yǎng]] ([[yang3]])|wg=yang<sup>3</sup>}}
-
-# {{defn|lang=cmn|sort=土05}}
 
 ----
 
