--- a/en/c/count.8441.wikitext
+++ b/en/c/count.8441.wikitext
@@ -153,7 +153,7 @@ From {{inh|en|enm|counten}}, borrowed from {{bor|en|xno|conter}}, from {{der|en|
 * Volapük: {{t+|vo|numön}}
 * Walloon: {{t+|wa|conter}}
 * Yiddish: {{t|yi|ציילן}}
-* Zealandic: {[t|zea|telle}}
+* Zealandic: {{t|zea|telle}}
 {{trans-bottom}}
 
 {{trans-top|to be of significance; to matter}}
