--- a/en/c/count.8441.wikitext
+++ b/en/c/count.8441.wikitext
@@ -105,7 +105,7 @@ From {{inh|en|enm|counten}}, borrowed from {{bor|en|xno|conter}}, from {{der|en|
 * Luxembourgish: {{t|lb|zielen}}
 * Macedonian: {{t|mk|брои|impf}}
 * Malay: {{t+|ms|kira}}, {{t+|ms|bilang}}, {{t+|ms|hitung}}
-* Maltese: {{t|mt|għadd}}, {{t|mt|għadd}}
+* Maltese: {{t|mt|għadd}}
 * Maore Comorian: {{t|swb|hisaɓu|tr=uhisabu|alt=uhisaɓu}}
 * Maori: {{t|mi|tatau}}
 * Middle English: {{t|enm|counten}}
