Reverted edits by [[Special:Contributions/157.48.2.185|157.48.2.185]]. If you think this rollback is in error, please leave a message on my [[User talk:SemperBlotto|talk page]]. <choose#52643956>

--- a/en/c/choose.6832.wikitext
+++ b/en/c/choose.6832.wikitext
@@ -264,7 +264,7 @@ From {{etyl|enm|en}} {{m|enm|chose}}, {{m|enm|chos}}, {{m|enm|chooce}}, from {{e
 ===References===
 * {{R:Century 1911}}
 * {{R:Webster 1913}}
-* {{R:OEDmgfd}}
+* {{R:OED}}
 
 ===Anagrams===
 * {{anagrams|en|a=cehoos|cohoes}}
