--- a/en/s/speak.7214.wikitext
+++ b/en/s/speak.7214.wikitext
@@ -54,6 +54,8 @@ From {{inh|en|enm|speken|t=to speak}}, from {{inh|en|ang|specan|t=to speak}}, al
 #*: [He will] thee in hope; he will '''speak''' thee fair.
 #* Emerson
 #*: Each village senior paused to scan / And '''speak''' the lovely caravan.
+#* '''2013''', George Francis Dow, ''Slave Ships and Slaving'' (quoting an older text)
+#*: '''Spoke''' the ship ''Union'' of Newport, without any anchor. The next day ran down to Acra, where the windlass was again capsized and the pawls broken.
 
 ====Synonyms====
 * {{l|en|articulate}}, {{l|en|talk}}, {{l|en|verbalize}}
