--- a/en/地/地.12978.wikitext
+++ b/en/地/地.12978.wikitext
@@ -80,8 +80,8 @@ Alternatively, {{zh-ref|Ōta (2003)}} proposes that it is a grammaticalization o
 
 ====Pronunciation====
 {{zh-pron
-|m=de,di
-|m_note=di is used in poetry, songs
+|m=de,di,1nb=unstressed,2nb=relatively more stressed
+|m_note=di is used in poetry, songs, stressed speech or dialectal speech
 |c=dei6,dei6-2
 |c_note=dei6 - literary; dei6-2 - vernacular, only used after reduplicated words
 |mn=ml:tē
