t+fr:[[taloche]] t+ca:[[taloja]] ([[WT:EDIT|Assisted]]) <float#52702922>

--- a/en/f/float.8440.wikitext
+++ b/en/f/float.8440.wikitext
@@ -324,9 +324,11 @@ From {{inh|en|enm|floten}}, from {{inh|en|ang|flotian|t=to float}}, from {{der|e
 
 {{trans-top|sort of trowel}}
 * Bulgarian: {{t|bg|мистрия|f}}
+* Catalan: {{t|ca|taloja|f}}
 * Dutch: {{t|nl|soort truweel}}
 {{trans-mid}}
 * Finnish: {{t|fi|hierrin}}
+* French: {{t+|fr|taloche|f}}
 * Russian: {{t+|ru|мастеро́к|m}}, {{t+|ru|глади́лка|f}}, {{t+|ru|прави́ло|m}}
 {{trans-bottom}}
 
