--- a/en/p/pull.8438.wikitext
+++ b/en/p/pull.8438.wikitext
@@ -139,7 +139,7 @@ From {{inh|en|enm|pullen}}, from {{inh|en|ang|pullian|t=to pull, draw, tug, pluc
 #*: Television, a favored source of news and information, '''pulls''' the largest share of advertising monies.
 # {{lb|en|ambitransitive|UK|Ireland|slang}} To persuade (someone) to have sex with one.<!-- or to be 'on the pull' (willing to have sex)-->
 #: ''I '''pulled''' at the club last night.''
-#: ''He's pulled that bird over there.''
+#: ''He's '''pulled''' that bird over there.''
 # {{lb|en|transitive}} To [[remove]] (something), especially from public [[circulation]] or [[availability]].
 #: ''Each day, they '''pulled''' the old bread and set out fresh loaves.''
 # {{lb|en|transitive}} To [[retrieve]] or [[generate]] for use.
