--- a/en/惡/惡.15606.wikitext
+++ b/en/惡/惡.15606.wikitext
@@ -34,7 +34,8 @@
 |md=áuk
 |mn=ok/oh
 |mn_note=ok - literary; oh - vernacular (“difficult; slow”, usually written as {{zh-l|僫}})
-|mn-t=ag4
+|mn-t=ag4/oh4
+|mn-t_note=oh4 - "difficult"
 |w=4oq
 |x=
 |mc=3
