--- a/en/s/speak.7214.wikitext
+++ b/en/s/speak.7214.wikitext
@@ -230,7 +230,7 @@ From {{inh|en|enm|speken|t=to speak}}, from {{inh|en|ang|specan|t=to speak}}, al
 *: Southern Sami: {{t|sma|håaledh}}, {{t|sma|håalodh}}, {{t|sma|nåalodh}}
 * Samoan: {{t|sm|tautala}}
 * Sanskrit: {{t+|sa|भणति}}
-** Vedic: {{t|sa|भनति|tr=bhánati}}
+*: Vedic: {{t|sa|भनति|tr=bhánati}}
 * Santali: {{t|sat|ᱨᱳᱲ|tr=rorr|sc=Olck}}
 * Sardinian: {{t|sc|fabedda}}, {{t|sc|faeddare}}, {{t|sc|fueddai}}
 * Scottish Gaelic: {{t|gd|bruidhinn}}
