--- a/en/健/健.11125.wikitext
+++ b/en/健/健.11125.wikitext
@@ -87,7 +87,7 @@
 ==Korean==
 
 ===Hanja===
-{{ko-hanja|굳세는|굳세다|건}}<br>
+{{ko-hanja|굳세다|굳세는|건}}<br>
 {{ko-hanja|건강하다|건강할|건}}
 
 # {{defn|lang=ko|sort=人09}}
