--- a/en/c/cost.6840.wikitext
+++ b/en/c/cost.6840.wikitext
@@ -137,7 +137,7 @@ From {{der|en|enm|cost}}, {{m|enm|coust}}, from {{m|enm|costen||to cost}}, see b
 
 ====Noun====
 {{wikipedia}}
-{{en-noun}}
+{{en-noun|~}}
 
 # Amount of [[money]], time, etc. that is [[required]] or used.
 #* {{quote-journal|lang=en|date=2013-06-08|volume=407|issue=8839|page=55|magazine={{w|The Economist}}
